--- a/coptic/mallon/index.html
+++ b/coptic/mallon/index.html
@@ -21700,6 +21700,63 @@
 			<p class="footnote">— 38. Vat. + <em>ⲟⲩⲟϩ</em>. </p>
 			<p class="footnote">— 39. Vat. <em>ⲁⲙⲃⲣⲉ</em>. </p>
 			<p>XLI.</p>
+			<p>1. <em>Ⲁⲥϣⲱⲡⲓ ⲇⲉ ⲙⲉⲛⲉⲛⲥⲁ ⲣⲟⲙⲡⲓ ⲃ̅ϯ ⲛ̀ⲉ̀ϩⲟⲟⲩ. ⲫⲁⲣⲁⲱ̀ ⲁϥⲛⲁⲩ ⲉ̀ⲟⲩⲣⲁⲥⲟⲩⲓ̀. ⲓⲥϫⲉⲕ ⲛⲁϥⲟ̀ϩⲓ ⲉ̀ⲣⲁⲧϥ ⲡⲉ ϩⲓϫⲉⲛ ⲫⲓⲁ̀ⲣⲟ.</em></p>
+			<p>2. <em>Ϩⲏⲡⲡⲉ<sup class="footnote">1</sup> ⲙ̀ⲫⲣⲏϯ ⲛⲉ ⲉ̀ⲃⲟⲗ ϧⲉⲛ ⲫⲓⲁ̀ⲣⲟ. ⲛⲁⲩⲛⲏⲟⲩ ⲉ̀ⲡϣⲱⲓ ⲡⲉ ⲛ̀ϫⲉ ⲍ̅ ⲛⲉ̀ϩⲉ ⲉ̀ⲛⲁⲛⲉⲩ<sup class="footnote">2</sup> ϧⲉⲛ ⲡⲟⲩⲥⲙⲟⲧ. ⲟⲩⲟϩ ⲉⲩⲥⲟⲧⲡ ϧⲉⲛ ⲛⲟⲩⲁ̀ϥⲟⲩⲓ̀. ⲛⲁⲩⲙⲟⲛⲓ<sup class="footnote">3</sup> ⲡⲉ ϧⲉⲛ ⲡⲓⲁ̀ⲭⲓ.</em></p>
+			<p>3. <em>ⲕⲉⲍ̅ ⲇⲉ<sup class="footnote">4</sup> ⲛ̀ⲉ̀ϩⲉ ⲛⲁⲩⲛⲏⲟⲩ ⲉ̀ⲡϣⲱⲓ. ⲙⲉⲛⲉⲛⲥⲁ ⲛⲁⲓ ⲉⲃⲟⲗ ϧⲉⲛ ⲫⲓⲁ̀ⲣⲟ. ⲉⲩϫⲁⲓⲱⲟⲩ ϧⲉⲛ ⲡⲟⲩⲥⲙⲟⲧ. ⲟⲩⲟϩ ⲉⲩϣⲟⲙ ϧⲉⲛ ⲛⲟⲩⲁ̀ϥⲟⲩⲓ̀. ⲛⲁⲩⲙⲟⲛⲓ<sup class="footnote">5</sup> ϧⲁⲧⲉⲛ ⲛⲓⲉ̀ϩⲱⲟⲩ. ⲓⲥⲕⲉⲛ<sup class="footnote">6</sup> ⲫⲓⲁ̀ⲣⲟ.</em></p>
+			<p>4. <em>Ⲟⲩⲟϩ ⲁ̀ ϯⲍ̅ ⲛ̀ⲉ̀ϩⲉ ⲉⲧϫⲁⲓⲱⲟⲩ<sup class="footnote">7</sup> ϧⲉⲛ ⲡⲟⲩⲥⲙⲟⲧ. ⲟⲩⲟϩ ⲉⲩϣⲟⲙ ϧⲉⲛ ⲛⲟⲩⲥⲁⲣⲝ. ⲁⲩⲱⲙⲕ ⲛ̀ϯⲍ̅ ⲛ̀ⲉ̀ϩⲉ<sup class="footnote">8</sup>. ⲉⲑⲛⲁⲛⲉⲩ ϧⲉⲛ ⲡⲟⲩⲥⲙⲟⲧ. ⲟⲩⲟϩ ⲉⲩⲥⲟⲧⲡ<sup class="footnote">9</sup> ϧⲉⲛ ⲛⲟⲩⲁ̀ϥⲟⲩⲓ̀. Ⲁϥⲧⲱⲛϥ ⲇⲉ ⲛ̀ϫⲉ ⲫⲁⲣⲁⲱ̀.</em></p>
+			<p>5. <em>Ⲟⲩⲟϩ ⲁϥⲛ̀ⲕⲟⲧ ⲉ̀ⲧⲓ<sup class="footnote">10</sup>. ⲟⲩⲟϩ ⲁϥⲛⲁⲩ ⲉ̀ⲕⲉⲣⲁⲥⲟⲩⲓ̀ ⲙ̀ⲙⲁϩⲃ̅ϯ. ϩⲏⲡⲡⲉ<sup class="footnote">11</sup> ⲛⲁⲩⲛⲏⲟⲩ ⲉ̀ⲡϣⲱⲓ ⲛ̀ϫⲉ ⲍ̅ ⲛ̀ϧⲉⲙⲥ ϧⲉⲛ ⲟⲩⲗⲁϧⲉⲙ ⲛ̀ⲟⲩⲱⲧ. ⲉⲩϫⲟⲛⲧ. ⲟⲩⲟϩ ⲉⲛⲁⲛⲉⲩ.</em></p>
+			<p>6. <em>Ⲟⲩⲟϩ ⲓⲥ ⲕⲉⲍ̅ ⲛ̀ϧⲉⲙⲥ ⲉⲩϣⲟⲙ. ⲉⲩⲟⲓ ⲛ̀ϫⲓⲙⲫⲉϩ. ⲛⲁⲩⲛⲏⲟⲩ ⲉ̀ⲡϣⲱⲓ ⲙⲉⲛⲉⲛⲥⲱⲟⲩ.</em></p>
+			<p>7. <em>Ⲟⲩⲟϩ ⲁ̀ⲡⲓⲍ̅ ⲛ̀ϧⲉⲙⲥ ⲉⲩϣⲟⲙ. ⲉⲧⲟⲓ<sup class="footnote">12</sup> ⲛ̀ϫⲓⲙⲫⲉϩ. ⲁⲩⲱⲙⲕ ⲙ̀ⲡⲓⲍ̅ ⲛ̀ϧⲉⲙⲥ ⲉⲧⲥⲟⲧⲡ. ⲟⲩⲟϩ ⲉⲧϫⲟⲛⲧ. ⲁϥⲧⲱⲛϥ ⲇⲉ ⲛ̀ϫⲉ ⲫⲁⲣⲁⲱ̀. ⲟⲩⲟϩ<sup class="footnote">13</sup> ⲛⲉ ⲟⲩⲣⲁⲥⲟⲩⲓ̀ ⲧⲉ.</em></p>
+			<p>8. <em>Ⲁⲥϣⲱⲡⲓ ⲇⲉ ⲉⲧⲁ ⲧⲟⲟⲩⲓ̀ ϣⲱⲡⲓ. ⲁⲥϣⲑⲟⲣⲧⲉⲣ ⲛ̀ϫⲉ ⲧⲉϥⲯⲩⲭⲏ. ⲟⲩⲟϩ ⲁϥⲟⲩⲱⲣⲡ ⲁϥⲙⲟⲩϯ ⲉ̀ ⲛⲓⲥⲫⲣⲁⲛϣ ⲛ̀ⲧⲉ ⲭⲏⲙⲓ. ⲛⲉⲙ ⲛⲓⲥⲁⲃⲉⲩ ⲧⲏⲣⲟⲩ. ⲁ<sup class="footnote">14</sup> ⲫⲁⲣⲁⲱ̀ ϫⲉ ⲧⲉϥⲣⲁⲥⲟⲩⲓ̀<sup class="footnote">15</sup> ⲛⲱⲟⲩ. ⲟⲩⲟϩ ⲛⲉ ⲙ̀ⲙⲟⲛ ⲫⲏ ⲉⲧⲧⲁⲙⲟ ⲙ̀ⲫⲁⲣⲁⲱ̀ ⲉ̀ⲣⲟⲥ ⲡⲉ.</em></p>
+			<p>9. <em>Ⲟⲩⲟϩ ⲁ̀ ⲡⲓⲣⲉϥⲟⲩⲱⲧϩ ⲥⲁϫⲓ ⲛⲉⲙ ⲫⲁⲣⲁⲱ̀ ⲉϥϫⲱ ⲙ̀ⲙⲟⲥ. ϫⲉ ϯⲓ̀ⲣⲓ ⲙ̀ⲫⲙⲉⲩⲓ̀ ⲙ̀ⲡⲁⲛⲟⲃⲓ ⲙ̀ⲫⲟⲟⲩ.</em></p>
+			<p>10. <em>Ⲫⲁⲣⲁⲱ̀ ⲁϥϫⲱⲛⲧ ⲉ̀ ⲛⲉϥⲁ̀ⲗⲱⲟⲩⲓ̀. ⲟⲩⲟϩ ⲁϥⲭⲁⲛ ϧⲉⲛ ⲡⲓϣⲧⲉⲕⲟ. ϧⲉⲛ ⲡⲏⲓ ⲙ̀ⲡⲓⲁⲣⲭⲓⲙⲁⲅⲓⲣⲟⲥ<sup class="footnote">16</sup>. ⲁⲛⲟⲕ ⲛⲉⲙ ⲡⲓⲁⲙⲣⲉ<sup class="footnote">17</sup>.</em></p>
+			<p>11. <em>Ⲟⲩⲟϩ ⲁⲛⲛⲁⲩ ⲉ̀ⲟⲩⲣⲁⲥⲟⲩⲓ̀<sup class="footnote">18</sup> ϧⲉⲛ ⲟⲩⲉϫⲱⲣϩ ⲛ̀ⲟⲩⲱⲧ. ⲁⲛⲟⲕ ⲛⲉⲙⲁϥ ⲫⲟⲩⲁⲓ ⲫⲟⲩⲁⲓ. ⲁϥⲛⲁⲩ ⲕⲁⲧⲁ ⲧⲉϥⲣⲁⲥⲟⲩⲓ̀.</em></p>
+			<p>12. <em>Ⲛⲁϥⲭⲏ ⲇⲉ ⲙ̀ⲙⲁⲩ ⲛⲉⲙⲁⲛ ⲡⲉ ⲛ̀ϫⲉ ⲟⲩϧⲉⲗϣⲓⲣⲓ ⲛ̀ⲁⲗⲟⲩ ⲛ̀ϩⲉⲃⲣⲉⲟⲥ ⲛ̀ⲧⲉ ⲡⲓⲁⲣⲭⲓⲙⲁⲅⲓⲣⲟⲥ<sup class="footnote">16</sup>. ⲟⲩⲟϩ ⲁⲛⲥⲁϫⲓ ⲛ̀ⲛⲉⲛⲣⲁⲥⲟⲩⲓ̀ ϧⲁⲧⲟⲧϥ.</em></p>
+			<p>13. <em>Ⲁϥⲃⲟⲗⲟⲩ<sup class="footnote">19</sup> ⲛⲁⲛ. ⲟⲩⲟϩ ⲁⲥϣⲱⲡⲓ ⲙ̀ⲡⲓⲣⲏϯ ⲉⲧⲁϥⲃⲟⲗⲟⲩ ⲛⲁⲛ. ⲡⲁⲓⲣⲏϯ ⲁⲥϣⲱⲡⲓ ⲁⲛⲟⲕ ⲙⲉⲛ. ⲁⲕⲭⲁⲧ ⲉϫⲉⲛ ⲧⲁⲁⲣⲭⲏ. ⲫⲏ ⲙⲉⲛ ⲁⲕⲁϣϥ<sup class="footnote">20</sup>.</em></p>
+			<p>14. <em>Ⲁϥⲟⲩⲱⲣⲡ ⲇⲉ ⲛ̀ϫⲉ ⲫⲁⲣⲁⲱ̀. ⲁϥⲙⲟⲩϯ ⲉ̀ ⲓⲱⲥⲏⲫ ⲁϥⲉⲛϥ<sup class="footnote">21</sup> ⲉ̀ⲃⲟⲗ ϧⲉⲛ ⲡⲓϣⲧⲉⲕⲟ. ⲟⲩⲟϩ ⲁⲩϧⲉⲕϫⲱϥ. ⲁⲩϣⲉⲃⲧ<sup class="footnote">22</sup> ⲧⲉϥⲥⲧⲟⲗⲏ ⲟⲩⲟϩ ⲁϥⲓ̀ ϩⲁ ⲫⲁⲣⲁⲱ̀.</em></p>
+			<p>15. <em>ⲡⲉϫⲉ<sup class="footnote">23</sup> ⲫⲁⲣⲁⲱ̀ ⲇⲉ<sup class="footnote">24</sup> ⲛ̀ⲓⲱⲥⲏⲫ. ϫⲉ ⲟⲩⲣⲁⲥⲟⲩⲓ̀ ⲁⲓⲛⲁⲩ ⲉⲣⲟⲥ. ⲟⲩⲟϩ ϥϣⲟⲡ ⲁⲛ ⲛ̀ϫⲉ ⲫⲏ ⲉⲧⲛⲁⲃⲟⲗⲥ. ⲁⲛⲟⲕ ⲇⲉ ⲁⲓⲥⲱⲧⲉⲙ ⲉⲑⲃⲏⲧⲕ ⲉⲩϫⲱ ⲙ̀ⲙⲟⲥ. ϫⲉ ⲕⲥⲱⲧⲉⲙ ⲉ̀ϩⲁⲛⲣⲁⲥⲟⲩⲓ̀. ⲟⲩⲟϩ ⲕⲃⲱⲗ ⲙ̀ⲙⲱⲟⲩ.</em></p>
+			<p>16. <em>Ⲁϥⲉ̀ⲣⲟⲩⲱ̀ ⲇⲉ ⲛ̀ϫⲉ ⲓⲱⲥⲏⲫ ⲡⲉϫⲁϥ ⲙ̀ⲫⲁⲣⲁⲱ̀. ϫⲉ ⲁϭⲛⲉ<sup class="footnote">25</sup> ⲫϯ ⲛ̀ⲛⲟⲩⲉⲣⲟⲩⲱ̀ ⲙ̀ⲡⲓⲟⲩϫⲁⲓ ⲙ̀ⲫⲁⲣⲁⲱ̀.</em></p>
+			<p>17. <em>Ⲁϥⲥⲁϫⲓ ⲇⲉ ⲛ̀ϫⲉ ⲫⲁⲣⲁⲱ̀. ⲛⲉⲙ ⲓⲱⲥⲏⲫ ⲉϥϫⲱ ⲙ̀ⲙⲟⲥ. ϫⲉ ⲛ̀ϩⲣⲏⲓ<sup class="footnote">26</sup> ϧⲉⲛ ⲧⲁⲓⲣⲁⲥⲟⲩⲓ̀<sup class="footnote">27</sup>. ⲓⲥϫⲉⲕ ⲛⲁⲓⲟ̀ϩⲓ ⲉ̀ⲣⲁⲧ ⲉⲥⲕⲉⲛ<sup class="footnote">28</sup> ⲛⲉⲛⲥⲫⲟⲧⲟⲩ ⲙ̀ⲫⲓⲁ̀ⲣⲟ.</em></p>
+			<p>18. <em>Ⲟⲩⲟϩ ⲙ̀ⲫⲣⲏϯ ⲛⲁⲩⲛⲏⲟⲩ<sup class="footnote">29</sup> ⲉ̀ⲡϣⲱⲓ ϧⲉⲛ ⲫⲓⲁⲣⲟ. ⲛ̀ϫⲉ ⲍ̅ ⲛ̀ⲉ̀ϩⲉ. ⲉⲛⲁⲛⲉⲩ ϧⲉⲛ ⲡⲟⲩⲥⲙⲟⲧ. ⲟⲩⲟϩ ⲉⲩⲥⲟⲧⲡ ϧⲉⲛ ⲛⲟⲩⲁ̀ϥⲟⲩⲓ̀. ⲛⲁⲩⲙⲟⲛⲓ<sup class="footnote">30</sup> ⲡⲉ ϧⲉⲛ ⲡⲓⲁ̀ⲭⲓ.</em></p>
+			<p>19. <em>ϩⲏⲡⲡⲉ<sup class="footnote">31</sup> ⲓⲥ ⲕⲉⲍ̅ ⲛ̀ⲉ̀ϩⲉ ⲛⲁⲩⲛⲏⲟⲩ ⲉ̀ⲡϣⲱⲓ ⲥⲁⲙⲉⲛϩⲏⲟⲩ<sup class="footnote">32</sup> ⲉⲃⲟⲗ ϧⲉⲛ ⲫⲓⲁ̀ⲣⲟ ⲉⲩϩⲱⲟⲩ. ⲟⲩⲟϩ ⲉⲩϫⲁⲓⲱⲟⲩ ϧⲉⲛ ⲡⲟⲩⲥⲙⲟⲧ. ⲟⲩⲟϩ ⲉⲩϣⲟⲙ ϧⲉⲛ ⲛⲟⲩⲁ̀ϥⲟⲩⲓ̀. ⲙ̀ⲡⲓⲛⲁⲩ ⲉ̀ⲟⲩⲟⲛ ⲉϥϫⲁⲓⲱⲟⲩ ⲙ̀ⲡⲟⲩⲣⲏϯ ϧⲉⲛ ⲡⲕⲁϩⲓ ⲧⲏⲣϥ ⲛ̀ⲭⲏⲙⲓ.</em></p>
+			<p>20. <em>Ⲟⲩⲟϩ ⲁ̀ ϯⲍ̅ ⲛ̀ⲉ̀ϩⲉ ⲉⲧϫⲁⲓⲱⲟⲩ. ⲟⲩⲟϩ ⲉⲧϣⲟⲙ. ⲁⲩⲱⲙⲕ ⲛ̀ϯⲍ̅ ⲛ̀ⲉ̀ϩⲉ ⲛ̀ⲧⲉ ϣⲟⲣⲡ. ⲉⲑⲛⲁⲛⲉⲩ ⲟⲩⲟϩ ⲉⲧⲥⲟⲧⲡ. ⲁⲩϣⲉ<sup class="footnote">33</sup> ⲛⲱⲟⲩ ⲉϧⲟⲩⲛ ⲉ̀ⲧⲟⲩⲛⲉϫⲓ<sup class="footnote">34</sup>.</em></p>
+			<p>21. <em>Ⲟⲩⲟϩ ⲛⲁⲣⲉ ⲛⲟⲩϩⲟ<sup class="footnote">35</sup> ϫⲁⲓⲱⲟⲩ ⲡⲉ<sup class="footnote">36</sup> ⲙ̀ⲫⲣⲏϯ ⲛ̀ϣⲟⲣⲡ ⲟⲛ. ⲁⲓⲧⲱⲛⲧ ⲇⲉ ⲟⲩⲟϩ ⲁⲓⲉⲛⲕⲟⲧ<sup class="footnote">37</sup>.</em></p>
+			<p>22. <em>Ⲁⲓⲛⲁⲩ ⲟⲛ ϧⲉⲛ ⲟⲩⲣⲁⲥⲟⲩⲓ̀ ⲙ̀ⲫⲣⲏϯ<sup class="footnote">38</sup> ⲓⲥ ⲕⲉⲍ̅ ⲛ̀ϧⲉⲙⲥ ⲉⲩⲛⲏⲟⲩ ⲉ̀ⲡϣⲱⲓ ϧⲉⲛ ⲟⲩⲗⲁⲭⲉⲙ ⲛ̀ⲟⲩⲱⲧ ⲉⲩϫⲟⲛⲧ<sup class="footnote">39</sup>. ⲟⲩⲟϩ ⲉⲛⲁⲛⲉⲩ.</em></p>
+			<p>23. <em>ⲕⲉⲍ̅ ⲇⲉ ⲛ̀ϧⲉⲙⲥ ⲉⲩϣⲟⲙ. ⲉⲩⲟⲓ<sup class="footnote">40</sup> ⲛ̀ϫⲓⲙⲫⲉϩ ⲛⲁⲩⲛⲏⲟⲩ ⲉ̀ⲡϣⲱⲓ ϧⲁⲑⲟⲩⲱⲟⲩ<sup class="footnote">41</sup> ⲡⲉ.</em></p>
+			<p>24. <em>Ⲟⲩⲟϩ ⲁ̀ ⲡⲓⲍ̅ ⲛ̀ϧⲉⲙⲥ ⲉⲧϣⲟⲙ. ⲉⲧⲟⲓ<sup class="footnote">42</sup> ⲛ̀ϫⲓⲙⲫⲉϩ. ⲁⲩⲱⲙⲕ ⲙ̀ⲡⲓⲍ̅ ⲛ̀ϧⲉⲙⲥ ⲉⲑⲛⲁⲛⲉⲩ. ⲟⲩⲟϩ ⲉⲧϫⲟⲛⲧ. ⲁⲓϫⲉ ⲧⲁⲣⲁⲥⲟⲩⲓ̀ ⲟⲩⲛ ⲛ̀ⲛⲓⲥⲫⲣⲁⲛϣ ⲛ̀ⲧⲉ ⲭⲏⲙⲓ<sup class="footnote">43</sup> ⲟⲩⲟϩ ⲛⲉ ⲙ̀ⲙⲟⲛ ⲫⲏ ⲉⲧⲛⲁⲧⲁⲙⲟ ⲙ̀ⲙⲟⲓ ⲉ̀ⲣⲟⲥ.</em></p>
+			<p>25. <em>Ⲟⲩⲟϩ ⲡⲉϫⲉ ⲓⲱⲥⲏⲫ ⲙ̀ⲫⲁⲣⲁⲱ̀. ϫⲉ ⲑⲣⲁⲥⲟⲩⲓ̀ ⲙ̀ⲫⲁⲣⲁⲱ̀<sup class="footnote">44</sup> ⲟⲩⲓ ⲧⲉ. ⲛⲏ ⲉⲧⲉ ⲫϯ ⲛⲁⲁⲓⲧⲟⲩ. ⲁϥⲧⲁⲙⲉ ⲫⲁⲣⲁⲱ̀ ⲉⲣⲱⲟⲩ.</em></p>
+			<p>26. <em>ϯ ⲍ̅ ⲛ̀ⲉ̀ϩⲉ ⲉⲑⲛⲁⲛⲉⲩ ⲍ̅ ⲛ̀ⲣⲟⲙⲡⲓ ⲛⲉ. ⲟⲩⲟϩ ⲡⲓⲍ̅ ⲛ̀ϧⲉⲙⲥ ⲉⲑⲛⲁⲛⲉⲩ ⲛ̀ⲣⲟⲙⲡⲓ ⲛⲉ. ⲑⲣⲁⲥⲟⲩⲓ̀ ⲙ̀ⲫⲁⲣⲁⲱ ⲟⲩⲓ ⲧⲉ.</em></p>
+			<p>27. <em>Ⲟⲩⲟϩ ϯⲍ̅ ⲛ̀ⲉ̀ϩⲉ ⲉⲧϣⲟⲙ ⲉⲧϫⲁⲓⲱⲟⲩ ⲟⲩⲟϩ ⲉⲧϩⲱⲟⲩ. ⲉⲑⲛⲏⲟⲩ ⲉ̀ⲡϣⲱⲓ ⲥⲁⲙⲉⲛϩⲏⲟⲩ ⲍ̅ ⲛ̀ⲣⲟⲙⲡⲓ ⲛⲉ. ⲟⲩⲟϩ ⲡⲓⲍ̅ ⲛ̀ϧⲉⲙⲥ ⲉⲧϣⲟⲙ ⲉⲧⲟⲓ ⲛ̀ϫⲓⲙⲫⲉϩ ⲍ̅ ⲛ̀ⲣⲟⲙⲡⲓ ⲛⲉ. Ⲉⲩⲉ̀ϣⲱⲡⲓ ⲛ̀ϫⲉ ⲍ̅ ⲛ̀ⲣⲟⲙⲡⲓ ⲛ̀ϩⲕⲟ.</em></p>
+			<p>28. <em>ⲡⲓⲥⲁϫⲓ ⲉⲧⲁⲓϫⲟϥ ⲙ̀ⲫⲁⲣⲁⲱ̀. ϫⲉ ⲛⲏ ⲉⲧⲉ ⲫϯ ⲛⲁⲁⲓⲧⲟⲩ ⲁϥⲧⲁⲙⲉ ⲫⲁⲣⲁⲱ ⲉ̀ⲣⲱⲟⲩ<sup class="footnote">45</sup>.</em></p>
+			<p>29. <em>ϩⲏⲡⲡⲉ<sup class="footnote">46</sup> ⲓⲥ ⲍ̅ ⲛ̀ⲣⲟⲙⲡⲓ ⲛ̀ϩⲉⲛⲟⲩϥⲓ ⲥⲉⲛⲏⲟⲩ. ⲉ̀ⲛⲁϣⲱⲟⲩ ϧⲉⲛ ⲡⲕⲁϩⲓ ⲧⲏⲣϥ ⲛ̀ⲭⲏⲙⲓ.</em></p>
+			<p>30. <em>ⲙⲉⲛⲉⲛⲥⲁ ⲛⲁⲓ ⲇⲉ ⲉⲩⲉ̀ⲓ̀ ⲛ̀ϫⲉ ⲕⲉⲍ̅<sup class="footnote">47</sup> ⲛ̀ⲣⲟⲙⲡⲓ ⲛ̀ϩⲃⲱⲛ. Ⲟⲩⲟϩ ⲉⲩⲉ̀ⲉⲣⲡⲱⲃϣ [ⲙ̀ⲡⲓϧⲓⲥⲓ<sup class="footnote">48</sup>] ⲉⲧⲛⲁϣⲱⲡⲓ<sup class="footnote">49</sup> ϧⲉⲛ ⲭⲏⲙⲓ. ⲉ̀ⲣⲉ<sup class="footnote">50</sup> ⲡⲓϩⲕⲟ ⲙⲟⲩⲛⲕ ⲙ̀ⲡⲓⲕⲁϩⲓ.</em></p>
+			<p>31. <em>Ⲟⲩⲟϩ ⲛ̀ⲛⲟⲩⲥⲟⲩⲉⲛ ⲡⲓϩⲉⲛⲟⲩϥⲓ ϩⲓϫⲉⲛ ⲡⲓⲕⲁϩⲓ ⲉⲃⲟⲗ ϧⲉⲛ ⲡⲓϩⲕⲟ ⲉⲧⲛⲁϣⲱⲡⲓ<sup class="footnote">51</sup> ⲙⲉⲛⲉⲛⲥⲁ ⲛⲁⲓ. Ⲉϥⲉ̀ϣⲱⲡⲓ ⲅⲁⲣ ⲉϥϫⲟⲣ ⲉ̀ⲙⲁϣⲱ.</em></p>
+			<p>32. <em>ⲉ̀ⲫⲙⲁ ϫⲉ ⲑⲣⲁⲥⲟⲩⲓ̀ ⲙ̀ⲫⲁⲣⲁⲱ ⲁⲥⲉⲣⲃ̅ϯ<sup class="footnote">52</sup>. ϫⲉ ϥⲛⲁⲉⲣⲙⲉⲑⲙⲏⲓ ⲛ̀ϫⲉ ⲡⲓⲥⲁϫⲓ ⲉ̀ⲃⲟⲗ ϩⲓⲧⲉⲛ ⲫϯ. ⲟⲩⲟϩ ⲫϯ ⲛⲁⲁⲓϥ ⲛ̀ⲭⲱⲗⲉⲙ.</em></p>
+			<p>33. <em>ϯⲛⲟⲩ ϫⲉ<sup class="footnote">53</sup> ⲥⲟϭⲛⲓ ⲛⲁⲕ ⲛ̀ⲟⲩⲣⲱⲙⲓ ⲛ̀ⲥⲁⲃⲉ. ⲟⲩⲟϩ ⲛ̀ⲕⲁⲧϩⲏⲧ. ⲧⲁϩⲟϥ<sup class="footnote">54</sup> ⲉϫⲉⲛ ⲡⲕⲁϩⲓ ⲛ̀ⲭⲏⲙⲓ.</em></p>
+			<p>34. <em>Ⲟⲩⲟϩ ⲙⲁⲣⲉϥⲓ̀ⲣⲓ ⲛ̀ϫⲉ ⲫⲁⲣⲁⲱ. ⲙⲁⲣⲉϥⲭⲱ<sup class="footnote">55</sup> ⲛ̀ϩⲁⲛⲧⲟⲡⲁⲣⲭⲏⲥ ϩⲓϫⲉⲛ ⲡⲓⲕⲁϩⲓ. ⲟⲩⲟϩ ⲙⲁⲣⲟⲩϭⲓ ⲙ̀ⲡⲓⲣⲉⲉ̅ ⲛ̀ⲧⲉ ⲛⲓⲟⲩⲧⲁϩ<sup class="footnote">56</sup> ⲛ̀ⲧⲉ ⲡⲕⲁϩⲓ ⲛ̀ⲭⲏⲙⲓ. ⲛ̀ϯⲍ̅ ⲛ̀ⲣⲟⲙⲡⲓ ⲛ̀ϩⲉⲛⲟⲩϥⲓ.</em></p>
+			<p>35. <em>Ⲟⲩⲟϩ ⲙⲁⲣⲟⲩⲑⲟⲩⲉⲧ ⲛⲓϧⲣⲏⲟⲩⲓ̀ ⲧⲏⲣⲟⲩ ⲛ̀ⲧⲉ ϯⲍ̅ ⲛ̀ⲣⲟⲙⲡⲓ ⲛ̀ϩⲉⲛⲟⲩϥⲓ ⲉⲑⲛⲏⲟⲩ ⲛⲁⲓ ⲉⲑⲛⲁⲛⲉⲩ. ⲙⲁⲣⲟⲩⲑⲟⲩⲉⲧ<sup class="footnote">57</sup> ⲡⲓⲥⲟⲩⲟ. ⲉ̀ϧⲟⲩⲛ ϧⲁ ⲧϫⲓϫ ⲙ̀ⲫⲁⲣⲁⲱ. ⲛ̀ⲥⲉⲁⲣⲉϩ ⲉ̀ⲛⲓϧⲣⲏⲟⲩⲓ̀ ϧⲉⲛ ⲛⲓⲃⲁⲕⲓ.</em></p>
+			<p>36. <em>Ⲟⲩⲟϩ ⲉⲩⲉ̀ϣⲱⲡⲓ ⲛ̀ϫⲉ ⲛⲓϧⲣⲏⲟⲩⲓ̀ ⲉⲩⲁ̀ⲣⲉϩ ⲉ̀ⲣⲱⲟⲩ ⲙ̀ⲡⲓⲕⲁϩⲓ. ⲉϯⲍ̅<sup class="footnote">58</sup> ⲛ̀ⲣⲟⲙⲡⲓ ⲛ̀ϩⲃⲱⲛ ⲉⲧⲛⲁϣⲱⲡⲓ<sup class="footnote">59</sup>. ϧⲉⲛ ⲡⲕⲁϩⲓ ⲛ̀ⲭⲏⲙⲓ. ⲛ̀ⲛⲉ ⲡⲓⲕⲁϩⲓ<sup class="footnote">60</sup> ϥⲱϯ ⲉ̀ⲃⲟⲗ ϧⲉⲛ ⲡⲓϩⲕⲟ.</em></p>
+			<p>37. <em>Ⲁ ⲡⲓⲥⲁϫⲓ<sup class="footnote">61</sup> ⲇⲉ ⲣⲁⲛⲉ ⲫⲁⲣⲁⲱ̀ ⲙ̀ⲡⲉϥⲙ̀ⲑⲟ ⲛⲉⲙ ⲡⲉⲙⲑⲟ<sup class="footnote">62</sup> ⲛ̀ⲛⲉϥⲁ̀ⲗⲱⲟⲩⲓ̀ ⲧⲏⲣⲟⲩ.</em></p>
+			<p>38. <em>Ⲟⲩⲟϩ ⲡⲉϫⲉ ⲫⲁⲣⲁⲱ ⲛ̀ⲛⲉϥⲁ̀ⲗⲱⲟⲩⲓ̀ ⲧⲏⲣⲟⲩ. ϫⲉ ⲙⲏ ⲧⲉⲛⲛⲁϫⲉⲙ ⲟⲩⲣⲱⲙⲓ ⲙ̀ⲡⲁⲓⲣⲏϯ ⲉ̀ⲟⲩⲟⲛ ⲟⲩⲡ︤ⲛ︦ⲁ︥ ⲛ̀ⲧⲉ ⲫϯ ⲛ̀ϧⲏⲧϥ.</em></p>
+			<p>39. <em>Ⲡⲉϫⲉ ⲫⲁⲣⲁⲱ̀ ⲇⲉ ⲛ̀ⲓⲱⲥⲏⲫ. ϫⲉ ⲉⲡⲓⲇⲏ ⲁ ⲫϯ ⲧⲁⲙⲟⲕ ⲉ̀ⲛⲁⲓ ⲧⲏⲣⲟⲩ. ⲙ̀ⲙⲟⲛ ⲣⲱⲙⲓ ⲛ̀ⲥⲁⲃⲉ. ⲟⲩⲟϩ ⲛ̀ⲕⲁⲧϩⲏⲧ ⲙ̀ⲡⲉⲕⲣⲏϯ.</em></p>
+			<p>40. <em>ⲛ̀ⲑⲟⲕ ⲉⲕⲉ̀ϣⲱⲡⲓ ϩⲓϫⲉⲛ ⲡⲁⲏⲓ. ⲟⲩⲟϩ ⲡⲁⲙⲏϣ ⲧⲏⲣϥ ⲉϥⲉ̀ⲥⲱⲧⲉⲙ ⲛ̀ⲥⲁⲣⲱⲕ<sup class="footnote">63</sup>. ⲡⲗⲏⲛ ⲡⲁⲑⲣⲟⲛⲟⲥ ⲙ̀ⲙⲁⲩⲁⲧϥ. Ⲉⲓⲉ̀ϣⲱⲡⲓ ⲉⲓϭⲟⲥⲓ ⲉ̀ⲣⲟⲕ ⲙ̀ⲙⲟϥ.</em></p>
+			<p>41. <em>Ⲡⲉϫⲉ ⲫⲁⲣⲁⲱ ⲇⲉ ⲛ̀ⲓⲱⲥⲏⲫ. ϫⲉ ϩⲏⲡⲡⲉ ϯⲛⲁⲭⲱ<sup class="footnote">64</sup> ⲙ̀ⲙⲟⲕ ⲙ̀ⲫⲟⲟⲩ. ⲉϫⲉⲛ ⲡⲕⲁϩⲓ ⲧⲏⲣϥ ⲛ̀ⲭⲏⲙⲓ.</em></p>
+			<p>42. <em>Ⲟⲩⲟϩ ⲁ̀ ⲫⲁⲣⲁⲱ̀ ⲉⲗ ⲡⲉϥϣϭⲟⲩⲣ ⲉ̀ⲃⲟⲗ ϩⲓⲧⲟⲧϥ. ⲁϥⲧⲏⲓϥ ⲉ̀ ⲧϫⲓϫ ⲛ̀ⲓⲱⲥⲏⲫ. ⲟⲩⲟϩ ⲁϥϯ ⲛ̀ⲟⲩϩⲉⲃⲥⲱ ⲛ̀ϣⲉⲛⲥ ⲥⲓⲱⲧϥ. ⲁϥϯ<sup class="footnote">65</sup> ⲛ̀ⲟⲩⲭⲗⲁⲗ ⲛ̀ⲛⲟⲩⲃ ⲛ̀ϧⲏⲧϥ<sup class="footnote">66</sup>.</em></p>
+			<p>43. <em>Ⲟⲩⲟϩ ⲁϥⲧⲁⲗⲟϥ ⲉϫⲉⲛ ϯⲃⲉⲣⲉϭⲱⲟⲩⲧⲥ ⲙ̀ⲙⲁϩⲃ̅ϯ. ⲁ̀<sup class="footnote">67</sup> ⲡⲓⲕⲩⲣⲓⲝ ⲱϣ ⲉ̀ⲃⲟⲗ ϧⲁϫⲱϥ ⲟⲩⲟϩ ⲁϥⲭⲁϥ ϩⲓϫⲉⲛ<sup class="footnote">68</sup> ⲡⲕⲁϩⲓ ⲧⲏⲣϥ ⲛ̀ⲭⲏⲙⲓ.</em></p>
+			<p>44. <em>Ⲡⲉϫⲉ ⲫⲁⲣⲁⲱ ⲇⲉ ⲛ̀ⲓⲱⲥⲏⲫ. ϫⲉ ⲁⲛⲟⲕ ⲡⲉ ⲫⲁⲣⲁⲱ. ⲁϭⲛⲟⲩⲕ<sup class="footnote">69</sup> ⲛ̀ⲛⲉ ϩⲗⲓ ⲓ̀ⲛⲓ ⲛ̀ⲧⲉϥϫⲓϫ. ⲉϫⲉⲛ ⲡⲕⲁϩⲓ ⲧⲏⲣϥ ⲛ̀ⲭⲏⲙⲓ.</em></p>
+			<p>45. <em>Ⲁ<sup class="footnote">70</sup> ⲫⲁⲣⲁⲱ̀ ⲙⲟⲩϯ ⲉ̀ⲫⲣⲁⲛ<sup class="footnote">71</sup> ⲛ̀ⲓⲱⲥⲏⲫ. ϫⲉ ⲯⲟⲛⲑⲱⲙⲫⲁⲛⲏⲭ<sup class="footnote">72</sup>. ⲟⲩⲟϩ ⲁϥϯ ⲛⲁϥ ⲛ̀ⲁⲥⲉⲛⲛⲉⲑ ⲧϣⲉⲣⲓ ⲙ̀ⲡⲉⲧⲉⲫⲣⲏ ⲡϩⲟⲛⲧ ⲛ̀ⲱⲛ ϯⲃⲁⲕⲓ ⲉⲩⲥϩⲓⲙⲓ ⲛⲁϥ.</em></p>
+			<p>46. <em>ⲓⲱⲥⲏⲫ ⲇⲉ ⲛⲁϥ<sup class="footnote">73</sup> ϧⲉⲛ ⲗ̅ ⲛ̀ⲣⲟⲙⲡⲓ ⲡⲉ. ⲉⲧⲁϥⲟ̀ϩⲓ ⲉ̀ⲣⲁⲧϥ ⲙ̀ⲡⲉⲙⲑⲟ ⲙ̀ⲫⲁⲣⲁⲱ̀ ⲡⲟⲩⲣⲟ ⲛ̀ⲭⲏⲙⲓ. ⲟⲩⲟϩ ⲁϥⲓ̀ ⲛ̀ϫⲉ ⲓⲱⲥⲏⲫ ⲉ̀ⲃⲟⲗ ϩⲁ ⲡϩⲟ ⲙ̀ⲫⲁⲣⲁⲱ̀. ⲁϥⲥⲓⲛⲓ<sup class="footnote">74</sup> ϧⲉⲛ ⲡⲕⲁϩⲓ ⲧⲏⲣϥ ⲛ̀ⲭⲏⲙⲓ.</em></p>
+			<p>47. <em>Ⲟⲩⲟϩ ⲁⲩⲓ̀ ⲛ̀ϫⲉ ϯⲍ̅ ⲛ̀ⲣⲟⲙⲡⲓ ⲛ̀ϩⲉⲛⲟⲩϥⲓ. ϧⲉⲛ ⲡⲕⲁϩⲓ ⲧⲏⲣϥ ⲛ̀ⲭⲏⲙⲓ. Ⲟⲩⲟϩ ⲁϥⲓ̀ⲣⲓ ⲛ̀ϫⲉ ⲡⲓⲕⲁϩⲓ ⲛ̀ϩⲁⲛⲭⲛⲁⲩ. ϧⲉⲛ ϯⲍ̅<sup class="footnote">75</sup> ⲛ̀ⲣⲟⲙⲡⲓ ⲛ̀ϩⲉⲛⲟⲩϥⲓ. ⲟⲩⲟϩ ⲁϥⲑⲱⲟⲩϯ ⲉ̀ϧⲟⲩⲛ ⲛ̀ⲛⲓϧⲣⲏⲟⲩⲓ̀ ⲧⲏⲣⲟⲩ ⲛ̀ⲧⲉ<sup class="footnote">75</sup> ϯⲍ̅ ⲛ̀ⲣⲟⲙⲡⲓ. ⲉⲧⲁ̀ ⲡⲓϩⲉⲛⲟⲩϥⲓ ϣⲱⲡⲓ ⲛ̀ϧⲏⲧⲟⲩ ϧⲉⲛ ⲡⲕⲁϩⲓ ⲛ̀ⲭⲏⲙⲓ.</em></p>
+			<p>48. <em>Ⲟⲩⲟϩ ⲁϥⲭⲁ ⲛⲓϧⲣⲏⲟⲩⲓ<sup class="footnote">76</sup> ⲛ̀ϧⲣⲏⲓ ϧⲉⲛ ⲛⲓⲃⲁⲕⲓ. ⲛⲓϧⲣⲏⲟⲩⲓ̀ ⲛ̀ⲧⲉ ⲛⲓⲙⲉϣϣⲱⲧ ⲛ̀ⲧⲉ ϯⲃⲁⲕⲓ. ⲛⲏ ⲉⲧⲕⲱϯ ⲉ̀ⲣⲟⲥ ⲁϥⲭⲁⲩ ⲛ̀ϧⲏⲧⲥ.</em></p>
+			<p>49. <em>Ⲟⲩⲟϩ<sup class="footnote">77</sup> ⲁ̀ ⲓⲱⲥⲏⲫ ⲑⲟⲩⲉⲧ ⲥⲟⲩⲟ̀. ⲙ̀ⲫⲣⲏϯ ⲙ̀ⲡⲓϣⲟ ⲛ̀ⲧⲉ ⲫⲓⲟⲙ. ⲉ̀ⲛⲁϣⲱϥ ⲉ̀ⲙⲁϣⲱ ϣⲁⲧⲟⲩϣⲧⲉⲙϫⲉⲙϫⲟⲙ ⲛ̀ϭⲓⲏ̀ⲡⲓ<sup class="footnote">78</sup> ⲙ̀ⲙⲟϥ. ⲛⲉ ⲙ̀ⲙⲟⲛⲧⲉϥ ⲏ̀ⲡⲓ ⲅⲁⲣ ⲙ̀ⲙⲁⲩ ⲡⲉ.</em></p>
+			<p>50. <em>Ⲓⲱⲥⲏⲫ ⲇⲉ ⲁ̀ ϣⲏⲣⲓ ⲃ̅ ϣⲱⲡⲓ ⲛⲁϥ ⲙ̀ⲡⲁⲧⲟⲩⲓ̀ ⲛ̀ϫⲉ ϯⲍ̅ ⲛ̀ⲣⲟⲙⲡⲓ ⲛ̀ϩⲕⲟ. ⲛⲏ ⲉⲧⲁⲥⲙⲁⲥⲟⲩ ⲛⲁϥ ⲛ̀ϫⲉ ⲁⲥⲉⲛⲛⲉⲑ ⲧϣⲉⲣⲓ ⲙ̀ⲡⲉⲧⲉⲫⲣⲏ. ⲡϩⲟⲛⲧ ⲛ̀ⲱⲛ<sup class="footnote">79</sup> ϯⲃⲁⲕⲓ.</em></p>
+			<p>51. <em>Ⲁ ⲓⲱⲥⲏⲫ ϯⲣⲉⲛ ⲫⲣⲁⲛ ⲙ̀ⲡⲉϥϣⲟⲣⲡ ⲙ̀ⲙⲓⲥⲓ ϫⲉ ⲙⲁⲛⲁⲥⲥⲏ ϫⲉ ⲁ̀ⲫϯ ⲑⲣⲓⲉⲣⲡⲱⲃϣ ⲛ̀ⲛⲁⲙ̀ⲕⲁϩ ⲛ̀ϩⲏⲧ ⲧⲏⲣⲟⲩ. ⲛⲉⲙ ⲛⲁⲡⲁⲓⲱⲧ.</em></p>
+			<p>52. <em>Ⲫⲣⲁⲛ ⲇⲉ ⲙ̀ⲡⲓⲙⲁϩⲃ̅ ⲁϥϯⲣⲉⲛϥ ϫⲉ ⲉⲫⲣⲉⲙ. ϫⲉ ⲁ̀ ⲫϯ ⲑⲣⲓⲁⲓⲁⲓ ϧⲉⲛ ⲡⲕⲁϩⲓ<sup class="footnote">80</sup> ⲙ̀ⲡⲁⲑⲉⲃⲓⲟ̀.</em></p>
+			<p>53. <em>Ⲁⲩⲥⲓⲛⲓ ⲇⲉ ⲛ̀ϫⲉ ϯⲍ̅ ⲛ̀ⲣⲟⲙⲡⲓ ⲛ̀ϩⲉⲛⲟⲩϥⲓ. ⲉⲧⲁⲩϣⲱⲡⲓ ϧⲉⲛ ⲡⲕⲁϩⲓ ⲛ̀ⲭⲏⲙⲓ.</em></p>
+			<p>54. <em>Ⲟⲩⲟϩ ⲁⲩⲉⲣϩⲏⲧⲥ ⲛ̄ϫⲉ ϯⲍ̅ ⲛ̀ⲣⲟⲙⲡⲓ ⲛ̀ϩⲕⲟ. ⲕⲁⲧⲁ ⲫⲣⲏϯ ⲉⲧⲁ̀ ⲓⲱⲥⲏⲫ ϫⲟⲥ. ⲟⲩⲟϩ ⲁ̀ ⲡⲓϩⲕⲟ ϣⲱⲡⲓ ϧⲉⲛ ⲡⲓⲕⲁϩⲓ ⲧⲏⲣϥ ⲛ̀ⲧⲉ ⲭⲏⲙⲓ. ⲛⲉ ⲙ̀ⲙⲟⲛ ⲱⲓⲕ ϣⲟⲡ ⲡⲉ. ⲟⲩⲟϩ ⲁϥϩⲕⲟ ⲛ̀ϫⲉ ⲡⲓⲕⲁϩⲓ ⲧⲏⲣϥ ⲛ̀ⲧⲉ ⲭⲏⲙⲓ.</em></p>
+			<p>55. <em>Ⲁ ⲡⲓⲙⲏϣ ⲇⲉ ⲱϣ ⲉ̀ⲡϣⲱⲓ ϩⲁ ⲫⲁⲣⲁⲱ̀ ⲉⲑⲃⲉ ⲱⲓⲕ. ⲡⲉϫⲉ<sup class="footnote">81</sup> ⲫⲁⲣⲁⲱ̀ ⲇⲉ ⲛ̀ⲛⲓⲣⲉⲙⲛ̀ⲭⲏⲙⲓ ⲧⲏⲣⲟⲩ. ϫⲉ ⲙⲁϣⲉ ⲛⲱⲧⲉⲛ ϩⲁ ⲓⲱⲥⲏⲫ. ⲫⲏ<sup class="footnote">82</sup> ⲉⲧⲉϥⲛⲁϫⲟϥ ⲛⲱⲧⲉⲛ ⲁⲣⲓⲧϥ.</em></p>
+			<p>56. <em>ⲛⲁⲣⲉ ⲡⲓϩⲕⲟ ⲅⲁⲣ<sup class="footnote">83</sup> ⲭⲏ ⲡϩⲟ ⲙ̀ⲡⲕⲁϩⲓ ⲧⲏⲣϥ ⲡⲉ<sup class="footnote">84</sup>. Ⲁϥⲟⲩⲱⲛ ⲇⲉ ⲛ̀ϫⲉ ⲓⲱⲥⲏⲫ ⲛ̀ⲛⲓⲁ̀ϩⲱⲣ ⲧⲏⲣⲟⲩ ⲛ̀ⲥⲟⲩⲟ̀. ⲟⲩⲟϩ ⲛⲁϥϯ ⲉ̀ⲃⲟⲗ ⲛ̀ⲛⲓⲣⲉⲙⲛ̀ⲭⲏⲙⲓ ⲧⲏⲣⲟⲩ.</em></p>
+			<p>57. <em>Ⲟⲩⲟϩ ⲛⲓⲭⲱⲣⲁ ⲧⲏⲣⲟⲩ ⲉⲧϧⲉⲛⲧ ⲉ̀ⲭⲏⲙⲓ<sup class="footnote">85</sup>. ⲁⲩⲓ̀ ⲉϧⲣⲏⲓ ⲉ̀ⲭⲏⲙⲓ ⲉ̀ϣⲱⲡ ⲛ̀ⲧⲉⲛ ⲓⲱⲥⲏⲫ. ⲁ̀ⲡⲓϩⲕⲟ ⲅⲁⲣ ϫⲉⲙⲛⲟⲙϯ ϩⲓϫⲉⲛ ⲡⲕⲁϩⲓ ⲧⲏⲣϥ.</em></p>
 			<p class="footnote">— 1. Vat. + <em>ⲟⲩⲟϩ</em>. </p>
 			<p class="footnote">— 2. Vat. <em>ⲉⲑⲛⲁⲛⲉⲩ</em>. </p>
 			<p class="footnote">— 3. Vat. + <em>ⲟⲩⲟϩ</em>. </p>
