--- a/coptic/mallon/index.html
+++ b/coptic/mallon/index.html
@@ -2467,71 +2467,44 @@
 			<p><em>ⲛⲁ-ⲧⲫⲉ ⲛⲉⲙ ⲛⲁ-ⲡⲕⲁϩⲓ</em> «les habitants du ciel et ceux de la terre»<sup class="footnote">6</sup>.</p>
 			<p><em>ⲛⲁ-ϯⲧⲁⲝⲓⲥ</em> «ceux de l'ordre = les gardes»<sup class="footnote">7</sup>.</p>
 			<p><em>ⲛⲁ-ⲧϩⲏ</em> «l'avenir»; <em>ⲛⲁ-ⲫⲁϩⲟⲩ</em> «le passé».</p>
-			<p>Les aspirées <em>ⲫ</em> <em>ⲑ</em> sont parfois remplacées par les fortes <em>ⲡ</em> <em>ⲧ</em> comme dans le dialecte ṣaꜥidique:
-				</p>
-				<p>
-					<em>ⲧⲁ-ⲫⲙⲏⲓ</em> «véritable»; <em>ⲧⲁ-ⲫⲣⲟ</em> «la bouche».
-				</p>
-				<p>
-					<em>ⲡⲁ-ⲭⲱⲛ</em> ou <em>ⲡⲁ-ϣⲟⲛⲥ</em> (le mois du dieu Chons) «Pachons».
-				</p>
-			</div>
-			<div id="section-091" class="section" data-section-no="91">
-				<p>3. On emploie souvent le pron. poss. après les relatifs démonstratifs <em>ⲫⲏ ⲉⲧⲉ</em>, <em>ⲑⲏ ⲉⲧⲉ</em>, <em>ⲛⲏ ⲉⲧⲉ</em> (97) en lui rattachant, au moyen de <em>ⲛ</em>, le nom de l'objet possédé: </p>
-				<p class="footnote">1. Ps. 23, 1.</p>
-				<p class="footnote">2. Guide de la Semaine sainte 38.</p>
-				<p class="footnote">3. Ex. 19, 5.</p>
-				<p class="footnote">4. Luc 9, 26.</p>
-				<p class="footnote">5. Kef. 385.</p>
-				<p class="footnote">6. Th. 261.</p>
-				<p class="footnote">7. IT. 99.</p>
-				<p>
-					<em>ⲫⲏ ⲉⲧⲉ ⲫⲱϥ ⲛ̀ⲓⲱⲧ</em> «celui qui est à lui en Père, <i>c.-à-d.</i> son Père» <sup class="footnote">1</sup>.
-				</p>
-				<p>
-					<em>ⲛⲏ ⲉⲧⲉ ⲛⲟⲩϥ ⲙ̀ⲙⲁⲑⲏⲧⲏⲥ</em> «ses disciples» <sup class="footnote">2</sup>.
-				</p>
-				<p>
-					<em>ⲙ̀ⲙⲟⲛ ⲟⲩⲡⲣⲟⲫⲏⲧⲏⲥ ⲉϥⲧⲁⲓⲏⲟⲩⲧ ϧⲉⲛ ⲑⲏ ⲉⲧⲉ ⲑⲱϥ ⲙ̀ⲃⲁⲕⲓ</em> «aucun prophète n'est honoré dans sa propre ville» <sup class="footnote">3</sup>.
-				</p>
-				<p>
-					<em>ⲑⲏ ⲉⲧⲉ ⲑⲱϥ ⲙ̀ⲯⲩⲭⲏ</em> «son âme» <sup class="footnote">4</sup>.
-				</p>
-				<p>Chapitre IV.</p>
-				<p>Adjectifs et Pronoms Démonstratifs.</p>
-				<p>I. Pour les objets rapprochés.</p>
-				<p>
-					<i>1. Adjectifs.</i>
-				</p>
-			</div>
-			<div id="section-092" class="section" data-section-no="92">
-				<p>Sing. masc. <em>ⲡⲁⲓ-</em> «ce», fém. <em>ⲧⲁⲓ-</em> «cette», pl. <em>ⲛⲁⲓ-</em> «ces». </p>
-				<p>
-					<i>2. Pronoms.</i>
-				</p>
-				<p>Sing. masc. <em>ⲫⲁⲓ</em> «celui-ci», fém. <em>ⲑⲁⲓ</em> «celle-ci», pl. <em>ⲛⲁⲓ</em> «ceux-ci». </p>
-				<p>
-					<em>ⲫⲁⲓ ⲡⲉ ⲡⲁϣⲏⲣⲓ</em> «celui-ci est mon fils» <sup class="footnote">5</sup>;
-				</p>
-				<p>
-					<em>ⲡⲁⲓ-ⲉϩⲟⲟⲩ</em> «ce jour»;
-				</p>
-				<p>
-					<em>ⲧⲁⲓⲣⲟⲙⲡⲓ</em> «cette année»;
-				</p>
-				<p>
-					<em>ⲛⲁⲓⲣⲱⲙⲓ</em> «ces hommes»;
-				</p>
-				<p>
-					<em>ⲛⲁⲓϩⲓⲟⲙⲓ</em> «ces femmes».
-				</p>
-				<p class="footnote">1. Missel 108.</p>
-				<p class="footnote">2. Missel 110.</p>
-				<p class="footnote">3. Jean 4, 44.</p>
-				<p class="footnote">4. Lév. 27, 2.</p>
-				<p class="footnote">5. Mt. 3, 17.</p>
-			</div>
-			<div id="section-093" class="section" data-section-no="93">
+			<p>Les aspirées <em>ⲫ</em> <em>ⲑ</em> sont parfois remplacées par les fortes <em>ⲡ</em> <em>ⲧ</em> comme dans le dialecte ṣaꜥidique:</p>
+			<p><em>ⲧⲁ-ⲫⲙⲏⲓ</em> «véritable»; <em>ⲧⲁ-ⲫⲣⲟ</em> «la bouche».</p>
+			<p><em>ⲡⲁ-ⲭⲱⲛ</em> ou <em>ⲡⲁ-ϣⲟⲛⲥ</em> (le mois du dieu Chons) «Pachons».</p>
+		</div>
+		<div id="section-091" class="section" data-section-no="91">
+			<p>3. On emploie souvent le pron. poss. après les relatifs démonstratifs <em>ⲫⲏ ⲉⲧⲉ</em>, <em>ⲑⲏ ⲉⲧⲉ</em>, <em>ⲛⲏ ⲉⲧⲉ</em> (97) en lui rattachant, au moyen de <em>ⲛ</em>, le nom de l'objet possédé:</p>
+			<p class="footnote">1. Ps. 23, 1.</p>
+			<p class="footnote">2. Guide de la Semaine sainte 38.</p>
+			<p class="footnote">3. Ex. 19, 5.</p>
+			<p class="footnote">4. Luc 9, 26.</p>
+			<p class="footnote">5. Kef. 385.</p>
+			<p class="footnote">6. Th. 261.</p>
+			<p class="footnote">7. IT. 99.</p>
+			<p><em>ⲫⲏ ⲉⲧⲉ ⲫⲱϥ ⲛ̀ⲓⲱⲧ</em> «celui qui est à lui en Père, <i>c.-à-d.</i> son Père»<sup class="footnote">1</sup>.</p>
+			<p><em>ⲛⲏ ⲉⲧⲉ ⲛⲟⲩϥ ⲙ̀ⲙⲁⲑⲏⲧⲏⲥ</em> «ses disciples»<sup class="footnote">2</sup>.</p>
+			<p><em>ⲙ̀ⲙⲟⲛ ⲟⲩⲡⲣⲟⲫⲏⲧⲏⲥ ⲉϥⲧⲁⲓⲏⲟⲩⲧ ϧⲉⲛ ⲑⲏ ⲉⲧⲉ ⲑⲱϥ ⲙ̀ⲃⲁⲕⲓ</em> «aucun prophète n'est honoré dans sa propre ville»<sup class="footnote">3</sup>.</p>
+			<p><em>ⲑⲏ ⲉⲧⲉ ⲑⲱϥ ⲙ̀ⲯⲩⲭⲏ</em> «son âme»<sup class="footnote">4</sup>.</p>
+			<p>Chapitre IV.</p>
+			<p>Adjectifs et Pronoms Démonstratifs.</p>
+			<p>I. Pour les objets rapprochés.</p>
+			<p><i>1. Adjectifs.</i></p>
+		</div>
+		<div id="section-092" class="section" data-section-no="92">
+			<p>Sing. masc. <em>ⲡⲁⲓ-</em> «ce», fém. <em>ⲧⲁⲓ-</em> «cette», pl. <em>ⲛⲁⲓ-</em> «ces».</p>
+			<p><i>2. Pronoms.</i></p>
+			<p>Sing. masc. <em>ⲫⲁⲓ</em> «celui-ci», fém. <em>ⲑⲁⲓ</em> «celle-ci», pl. <em>ⲛⲁⲓ</em> «ceux-ci».</p>
+			<p><em>ⲫⲁⲓ ⲡⲉ ⲡⲁϣⲏⲣⲓ</em> «celui-ci est mon fils»<sup class="footnote">5</sup>;</p>
+			<p><em>ⲡⲁⲓ-ⲉϩⲟⲟⲩ</em> «ce jour»;</p>
+			<p><em>ⲧⲁⲓⲣⲟⲙⲡⲓ</em> «cette année»;</p>
+			<p><em>ⲛⲁⲓⲣⲱⲙⲓ</em> «ces hommes»;</p>
+			<p><em>ⲛⲁⲓϩⲓⲟⲙⲓ</em> «ces femmes».</p>
+			<p class="footnote">1. Missel 108.</p>
+			<p class="footnote">2. Missel 110.</p>
+			<p class="footnote">3. Jean 4, 44.</p>
+			<p class="footnote">4. Lév. 27, 2.</p>
+			<p class="footnote">5. Mt. 3, 17.</p>
+		</div>
+		<div id="section-093" class="section" data-section-no="93">
 				<p>Le pronom <em>ⲫⲁⲓ</em>
 					<em>ⲑⲁⲓ</em>
 					<em>ⲛⲁⲓ</em> s'emploie souvent après un nom pour renforcer le sens de l'adjectif poss. ou démonstratif:
