--- a/coptic/mallon/index.html
+++ b/coptic/mallon/index.html
@@ -21778,7 +21778,44 @@
 			<p class="footnote">— 84. Vat. — <em>ⲡⲉ</em>.</p>
 			<p class="footnote">— 85. Vat. — <em>ⲉⲧϧⲉⲛⲧ</em>.</p>
 			<p>XLII.</p>
-			<p class="footnote">— 1. Vat. <em>ⲉⲙⲁⲩ</em>.</p>
+			<p>1. <em>Ⲉⲧⲁϥⲛⲁⲩ ⲇⲉ ⲛ̀ϫⲉ ⲓ̀ⲁ̀ⲕⲱⲃ. ϫⲉ ⲥⲉϯⲥⲟⲩⲟ̀ ⲉ̀ⲃⲟⲗ ϧⲉⲛ ⲭⲏⲙⲓ. ⲡⲉϫⲉ ⲓ̀ⲁ̀ⲕⲱⲃ ⲛ̀ⲛⲉϥϣⲏⲣⲓ. ϫⲉ ⲉⲑⲃⲉ ⲟⲩ ⲧⲉⲧⲉⲛϣⲟⲗϩ ⲛ̀ϩⲏⲧ.</em></p>
+			<p>2. <em>ϩⲏⲡⲡⲉ ⲁⲓⲥⲱⲧⲉⲙ ϫⲉ ⲥⲉϯ ⲥⲟⲩⲟ̀ ⲉ̀ⲃⲟⲗ ϧⲉⲛ ⲭⲏⲙⲓ ⲙⲁϣⲉⲛⲱⲧⲉⲛ ⲉ̀ϧⲣⲏⲓ ⲉ̀ⲭⲏⲙⲓ<sup class="footnote">1</sup>. ⲟⲩⲟϩ ϣⲱⲡ ⲛⲁⲛ<sup class="footnote">2</sup> ⲛ̀ϩⲁⲛⲕⲟⲩϫⲓ ⲛ̀ϧⲣⲏⲟⲩⲓ̀ ϩⲓⲛⲁ ⲛ̀ⲧⲉⲛⲱⲛϧ. ⲟⲩⲟϩ ⲛ̀ⲧⲉⲛϣⲧⲉⲙⲙⲟⲩ.</em></p>
+			<p>3. <em>Ⲁⲩⲓ̀ ⲇⲉ ⲉ̀ϧⲣⲏⲓ<sup class="footnote">3</sup> ⲛ̀ϫⲉ ⲛⲉⲛⲥⲛⲏⲟⲩ ⲛ̀ⲓⲱⲥⲏⲫ ⲡⲉϥⲓ̅ ⲛ̀ⲥⲟⲛ ⲉ̀ϣⲉⲡ ⲥⲟⲩⲟ̀ ⲉⲃⲟⲗ ϧⲉⲛ ⲭⲏⲙⲓ.</em></p>
+			<p>4. <em>Ⲃⲉⲛⲓⲁⲙⲓⲛ ⲇⲉ ⲡⲥⲟⲛ ⲛ̀ⲓⲱⲥⲏⲫ ⲙ̀ⲡⲉϥⲧⲁⲟⲩⲟϥ ⲛⲉⲙ ⲛⲉϥⲥⲛⲏⲟⲩ. ⲁϥϫⲟⲥ ⲅⲁⲣ ϫⲉ ⲙⲏⲡⲟⲧⲉ ⲛ̀ⲧⲉ ⲟⲩϣⲱⲛⲓ ⲧⲁϩⲟϥ<sup class="footnote">4</sup>.</em></p>
+			<p>5. <em>Ⲁⲩⲓ̀ ⲇⲉ ⲛ̀ϫⲉ ⲛⲉⲛϣⲏⲣⲓ ⲙ̀ⲡⲓ︤ⲥ︦ⲗ︥ ⲉ̀ϧⲣⲏⲓ ⲉ̀ⲭⲏⲙⲓ. ⲉ̀ϣⲱⲡ ⲛⲉⲙ ⲛⲏ ⲉⲧⲛⲏⲟⲩ<sup class="footnote">5</sup> ⲛⲁⲣⲉ ⲡⲓϩⲕⲟ ⲅⲁⲣ ⲭⲏ ⲡⲉ ϧⲉⲛ ⲡⲕⲁϩⲓ<sup class="footnote">6</sup> ⲛ̀ⲭⲁⲛⲁⲁⲛ.</em></p>
+			<p>6. <em>Ⲓⲱⲥⲏⲫ ⲇⲉ ⲛⲁϥⲟⲓ ⲛ̀ⲁⲣⲭⲱⲛ<sup class="footnote">7</sup> ⲉ̀ⲡⲓⲕⲁϩⲓ. ⲟⲩⲟϩ ⲫⲁⲓ ⲛⲁϥϯ ⲉ̀ⲃⲟⲗ ⲙ̀ⲡⲓⲙⲏϣ ⲧⲏⲣϥ ⲛ̀ⲧⲉ ⲡⲕⲁϩⲓ<sup class="footnote">8</sup>. Ⲉⲧⲁⲩⲓ̀ ⲇⲉ ⲛ̀ϫⲉ ⲛⲉⲛⲥⲛⲏⲟⲩ ⲛ̀ⲓⲱⲥⲏⲫ. ⲁⲩϩⲓⲧⲟⲩ ⲉ̀ϫⲉⲛ ⲡⲟⲩϩⲟ ⲉ̀ϫⲉⲛ ⲡⲓⲕⲁϩⲓ<sup class="footnote">9</sup>. ⲁⲩⲟⲩⲱϣⲧ ⲙ̀ⲙⲟϥ.</em></p>
+			<p>7. <em>Ⲉⲧⲁϥⲛⲁⲩ ⲇⲉ ⲛ̀ϫⲉ ⲓⲱⲥⲏⲫ ⲉ̀ ⲛⲉϥⲥⲛⲏⲟⲩ ⲁϥⲥⲟⲩⲱ̀ⲛⲟⲩ. ⲛⲁϥⲓ̀ⲣⲓ<sup class="footnote">10</sup> ⲙ̀ⲙⲟϥ ⲛ̀ϣⲉⲙⲙⲟ ⲉ̀ⲃⲟⲗ ϩⲁⲣⲱⲟⲩ. ⲁϥⲥⲁϫⲓ ⲛⲉⲙⲱⲟⲩ ϧⲉⲛ ϩⲁⲛⲥⲁϫⲓ ⲉⲩⲛⲁϣⲧ. Ⲟⲩⲟϩ ⲡⲉϫⲁϥ<sup class="footnote">11</sup> ⲛⲱⲟⲩ ϫⲉ ⲉⲧⲁ̀ⲣⲉⲧⲉⲛⲓ̀ ⲉⲃⲟⲗ ⲑⲱⲛ. ⲛ̀ⲑⲱⲟⲩ ⲇⲉ ⲡⲉϫⲱⲟⲩ ϫⲉ ⲉ̀ⲃⲟⲗ ϧⲉⲛ ⲡⲕⲁϩⲓ ⲛ̀ⲭⲁⲛⲁⲁⲛ. ⲉ̀ϣⲉⲡ ϩⲁⲛϧⲣⲏⲟⲩⲓ̀<sup class="footnote">12</sup> ⲛⲁⲛ.</em></p>
+			<p>8. <em>Ⲁ ⲓⲱⲥⲏⲫ ⲥⲟⲩⲉⲛ<sup class="footnote">13</sup> ⲛⲉϥⲥⲛⲏⲟⲩ. ⲛ̀ⲑⲱⲟⲩ ⲇⲉ ⲙ̀ⲡⲟⲩⲥⲟⲩⲱⲛϥ.</em></p>
+			<p>9. <em>Ⲟⲩⲟϩ ⲁϥⲉⲣⲫⲙⲉⲩⲓ̀ ⲛ̀ϫⲉ ⲓⲱⲥⲏⲫ ⲛ̀ⲛⲓⲣⲁⲥⲟⲩⲓ̀<sup class="footnote">14</sup> ⲛⲏ ⲉⲧⲁϥⲛⲁⲩ ⲉ̀ⲣⲱⲟⲩ ⲛ̀ⲑⲟϥ. ⲟⲩⲟϩ ⲡⲉϫⲁϥ ⲛⲱⲟⲩ ϫⲉ ⲛ̀ⲑⲱⲧⲉⲛ ϩⲁⲛϫⲏⲣ. ⲉⲧⲁ̀ⲣⲉⲧⲉⲛⲓ̀ ⲉ̀ϯⲛⲓⲁ̀ⲧⲉⲛⲑⲏⲛⲟⲩ ⲛ̀ⲛⲓⲧⲁⲧⲥⲓ ⲛ̀ⲧⲉ ϯⲭⲱⲣⲁ.</em></p>
+			<p>10. <em>ⲛ̀ⲑⲱⲟⲩ ⲇⲉ ⲡⲉϫⲱⲟⲩ ϫⲉ ⲙ̀ⲙⲟⲛ ⲡⲉⲛϭⲟⲓⲥ. Ⲉⲧⲁⲛⲓ̀ ⲉ̀ϣⲉⲡ ϩⲁⲛϧⲣⲏⲟⲩⲓ̀ ⲛⲁⲛ ϧⲁ ⲛⲉⲕⲁ̀ⲗⲱⲟⲩⲓ̀.</em></p>
+			<p>11. <em>Ⲁⲛⲟⲛ<sup class="footnote">15</sup> ⲧⲏⲣⲉⲛ ⲁⲛⲟⲛ ⲛⲉⲛϣⲏⲣⲓ ⲛ̀ⲟⲩⲣⲱⲙⲓ ⲛ̀ⲟⲩⲱⲧ. ⲁⲛⲟⲛ ϩⲁⲛϩⲓⲣⲏⲛⲓⲕⲟⲥ<sup class="footnote">16</sup> ⲁⲛⲟⲛ ϩⲁⲛϫⲏⲣ ⲁⲛ ϧⲁ ⲛⲉⲕⲁ̀ⲗⲱⲟⲩⲓ̀.</em></p>
+			<p>12. <em>Ⲡⲉϫⲁϥ ⲇⲉ ⲛⲱⲟⲩ ϫⲉ ⲙ̀ⲙⲟⲛ. ⲁⲗⲗⲁ ⲉⲧⲁ̀ⲣⲉⲧⲉⲛⲓ̀ ⲉ̀ⲛⲁⲩ ⲉ̀ⲛⲉⲛⲧⲁⲧⲥⲓ ⲙ̀ⲡⲓⲕⲁϩⲓ.</em></p>
+			<p>13. <em>Ⲛⲑⲱⲟⲩ ⲇⲉ ⲡⲉϫⲱⲟⲩ ⲛⲁϥ ϫⲉ ⲧⲉⲛⲉⲣⲓ̅ⲃ̅ ⲛ̀ⲥⲟⲛ ϧⲁ ⲛⲉⲕⲁ̀ⲗⲱⲟⲩⲓ̀ ϧⲉⲛ ⲡⲕⲁϩⲓ ⲛ̀ⲭⲁⲛⲁⲁⲛ. ϩⲏⲡⲡⲉ<sup class="footnote">17</sup> ⲓⲥ ⲡⲓⲕⲟⲩϫⲓ ϥⲭⲏ ϧⲁⲧⲉⲛ<sup class="footnote">18</sup> ⲡⲉⲛⲓⲱⲧ ⲙ̀ⲫⲟⲟⲩ. ⲡⲓⲕⲉⲟⲩⲁⲓ ⲇⲉ ϥϣⲟⲡ ⲁⲛ.</em></p>
+			<p>14. <em>Ⲡⲉϫⲉ ⲓⲱⲥⲏⲫ ⲛⲱⲟⲩ<sup class="footnote">19</sup> ϫⲉ ⲫⲁⲓ ⲡⲉⲧⲁⲓϫⲟϥ ⲛⲱⲧⲉⲛ. ⲉⲓϫⲱ<sup class="footnote">20</sup> ⲙ̀ⲙⲟⲥ ϫⲉ ⲛ̀ⲑⲱⲧⲉⲛ ϩⲁⲛϫⲏⲣ.</em></p>
+			<p>15. <em>Ϧⲉⲛ ⲫⲁⲓ ⲧⲉⲧⲉⲛⲛⲁⲟⲩⲱⲛϩ ⲉⲃⲟⲗ. ϣⲉ ⲡⲟⲩϫⲁⲓ ⲙ̀ⲫⲁⲣⲁⲱ<sup class="footnote">21</sup> ⲛ̀ⲛⲉⲧⲉⲛϣⲉ ⲛⲱⲧⲉⲛ ⲉⲃⲟⲗ ⲧⲁⲓ. ⲁⲣⲉϣⲧⲉⲙ ⲡⲉⲧⲉⲛⲕⲟⲩϫⲓ ⲛ̀ⲥⲟⲛ ⲓ̀ ⲉⲙⲛⲁⲓ<sup class="footnote">22</sup>.</em></p>
+			<p>16. <em>Ⲟⲩⲱⲣⲡ ⲟⲩⲁⲓ<sup class="footnote">23</sup> ⲟⲩⲛ ⲉⲃⲟⲗϧⲉⲛⲑⲏⲛⲟⲩ ⲟⲩⲟϩ<sup class="footnote">24</sup> ϭⲓ ⲙ̀ⲡⲉⲧⲉⲛⲥⲟⲛ. ⲛ̀ⲑⲱⲧⲉⲛ ⲇⲉ ⲉⲩⲉ̀ⲧⲁϩⲛⲟ ⲙ̀ⲙⲱⲧⲉⲛ ϣⲁⲧⲟⲩⲟⲩⲱⲛϩ ⲉ̀ⲃⲟⲗ ⲛ̀ϫⲉ ⲛⲉⲧⲉⲛⲥⲁϫⲓ. ϫⲉ ⲁⲛ ⲧⲉⲧⲉⲛϫⲉⲙⲉⲑⲙⲏⲓ. ϣⲁⲛ ⲙ̀ⲙⲟⲛ ⲙ̀ⲙⲟⲛ ϣⲉ ⲡⲟⲩϫⲁⲓ ⲙ̀ⲫⲁⲣⲁⲱ<sup class="footnote">25</sup> ⲛ̀ⲑⲱⲧⲉⲛ ϩⲁⲛϫⲏⲣ.</em></p>
+			<p>17. <em>Ⲟⲩⲟϩ ⲁϥⲭⲁⲩ ϧⲉⲛ ⲡⲓϣⲧⲉⲕⲟ ⲛ̀ⲅ̅ ⲛ̀ⲉ̀ϩⲟⲟⲩ.</em></p>
+			<p>18. <em>Ⲡⲉϫⲁϥ ⲇⲉ ⲛⲱⲟⲩ ⲛ̀ϫⲉ ⲓⲱⲥⲏⲫ<sup class="footnote">26</sup> ⲙ̀ⲡⲓⲙⲁϩⲅ̅ ⲛ̀ⲉ̀ϩⲟⲟⲩ. ϫⲉ ⲫⲁⲓ ⲁ̀ⲣⲓⲧϥ ⲉ̀ⲣⲉⲧⲉⲛⲱⲛϧ<sup class="footnote">27</sup>. ⲫϯ ⲅⲁⲣ ⲁⲛⲟⲕ ϯⲉⲣϩⲟϯ ϧⲁⲧⲉϥϩⲏ.</em></p>
+			<p>19. <em>Ⲓⲥϫⲉ ⲛ̀ⲑⲱⲧⲉⲛ ϩⲁⲛϩⲓⲣⲏⲛⲓⲕⲟⲥ<sup class="footnote">28</sup>. ⲙⲁⲣⲟⲩⲧⲁϩⲛⲟ ⲛ̀ⲟⲩⲁⲓ ⲛ̀ⲛⲉⲧⲉⲛⲥⲛⲏⲟⲩ<sup class="footnote">29</sup> ϧⲉⲛ ⲡⲓϣⲧⲉⲕⲟ. ⲛ̀ⲑⲱⲧⲉⲛ ⲇⲉ ⲙⲁϣⲉ ⲛⲱⲧⲉⲛ. ϭⲓ<sup class="footnote">30</sup> ⲙ̀ⲡⲓⲥⲟⲩⲟ̀ ⲉⲧⲁ̀ⲣⲉⲧⲉⲛϣⲟⲡϥ.</em></p>
+			<p>20. <em>Ⲟⲩⲟϩ ⲡⲉⲧⲉⲛⲕⲟⲩϫⲓ ⲛ̀ⲥⲟⲛ ⲁ̀ⲛⲓⲧϥ ϩⲁⲣⲟⲓ<sup class="footnote">31</sup>. ⲟⲩⲟϩ ⲉⲩⲉ̀ⲧⲉⲛϩⲉⲧ ⲛⲉⲧⲉⲛⲥⲁϫⲓ ⲙ̀ⲙⲟⲛ ⲉ̀ⲣⲉⲧⲉⲛⲉ̀ⲙⲟⲩ. Ⲁⲩⲓ̀ⲣⲓ ⲇⲉ ⲙ̀ⲡⲁⲓⲣⲏϯ.</em></p>
+			<p>21. <em>Ⲡⲉϫⲉ<sup class="footnote">32</sup> ⲫⲟⲩⲁⲓ ⲫⲟⲩⲁⲓ ⲙ̀ⲡⲉϥⲥⲟⲛ. ϫⲉ ⲁ̀ϩⲁ. ⲧⲉⲛⲛ̀ϩⲣⲏⲓ ⲅⲁⲣ ϧⲉⲛ<sup class="footnote">33</sup> ⲛⲉⲛⲛⲟⲃⲓ. ⲉⲑⲃⲉ ⲡⲉⲛⲥⲟⲛ. ϫⲉ ⲁⲛϩⲓⲡϩⲟ ⲙ̀ⲡⲓϩⲟϫϩⲉϫ ⲛ̀ⲧⲉ ⲧⲉϥⲯⲩⲭⲏ. ϩⲟⲧⲉ ⲉϥϯϩⲟ ⲉ̀ⲣⲟⲛ ⲙ̀ⲡⲉⲛⲥⲱⲧⲉⲙ ⲉ̀ⲣⲟϥ<sup class="footnote">34</sup> ⲉⲑⲃⲉ ⲫⲁⲓ. ⲁϥⲓ̀ ⲉ̀ϩⲣⲏⲓ<sup class="footnote">35</sup> ⲉ̀ϫⲱⲛ ⲛ̀ϫⲉ ⲡⲁⲓϩⲟϫϩⲉϫ ⲧⲏⲣϥ.</em></p>
+			<p>22. <em>Ⲁϥⲉ̀ⲣⲟⲩⲱ̀ ⲇⲉ ⲛ̀ϫⲉ ⲣⲟⲩⲃⲏⲛ ⲡⲉϫⲁϥ ⲛⲱⲟⲩ ϫⲉ ⲙ̀ⲡⲓⲥⲁϫⲓ ⲛⲉⲙⲱⲧⲉⲛ<sup class="footnote">36</sup> ⲉⲓϫⲱ ⲙ̀ⲙⲟⲥ. ϫⲉ ⲙ̀ⲡⲉⲣϭⲓ ⲙ̀ⲡⲓⲁ̀ⲗⲟⲩ ⲛ̀ϫⲟⲛⲥ. ⲟⲩⲟϩ ⲙ̀ⲡⲉⲧⲉⲛⲥⲱⲧⲉⲙ ⲛ̀ⲥⲱⲓ. ϩⲏⲡⲡⲉ ⲥⲉⲕⲱϯ ⲛ̀ⲥⲁ ⲡⲉϥⲥⲛⲟϥ.</em></p>
+			<p>23. <em>ⲛ̀ⲑⲱⲟⲩ ⲇⲉ ⲛⲁⲩⲉ̀ⲙⲓ ⲁⲛ ⲡⲉ ϫⲉ ⲓⲱⲥⲏⲫ ⲥⲱⲧⲉⲙ ⲉ̀ⲣⲱⲟⲩ. ⲛⲁⲣⲉ ⲡⲓⲉⲣⲙⲏⲛⲉⲩⲧⲏⲥ ⲅⲁⲣ ⲭⲏ ⲟⲩⲧⲱⲟⲩ ⲡⲉ.</em></p>
+			<p>24. <em>Ⲁϥⲕⲟⲧϥ ⲇⲉ ⲥⲁⲃⲟⲗ ⲙ̀ⲙⲱⲟⲩ ⲛ̀ϫⲉ ⲓⲱⲥⲏⲫ ⲁϥⲣⲓⲙⲓ. ⲡⲁⲗⲓⲛ<sup class="footnote">37</sup> ⲁϥⲧⲁⲥⲑⲟ ϩⲁⲣⲱⲟⲩ. ⲟⲩⲟϩ<sup class="footnote">38</sup> ⲡⲉϫⲁϥ ⲛⲱⲟⲩ. ϫⲉ ⲉ̀ⲣⲉ ⲟⲩⲁⲓ ⲙ̀ⲙⲱⲧⲉⲛ ⲥⲱϫⲡ ⲙ̀ⲡⲁⲓⲙⲁ. ⲕⲁⲧⲁ ⲫⲣⲏϯ ⲉ̀ⲧⲁⲓϫⲟⲥ ⲛⲱⲧⲉⲛ. ⲡⲉⲧⲉⲛⲕⲟⲩϫⲓ ⲛ̀ⲥⲟⲛ ⲁⲛⲓⲧϥ ⲛⲉⲙⲱⲧⲉⲛ ϧⲉⲛ ⲫⲁⲓ ⲅⲁⲣ ⲉ̀ⲣⲉⲧⲉⲛⲟⲩⲱⲛϩ ⲉ̀ⲃⲟⲗ. ϫⲉ ⲛ̀ⲑⲱⲧⲉⲛ ϩⲁⲛϩⲓⲣⲏⲛⲓⲕⲟⲥ. ⲛ̀ⲑⲱⲧⲉⲛ ϩⲁⲛϫⲏⲣ ⲁⲛ<sup class="footnote">39</sup>.</em></p>
+			<p>25. <em>Ⲟⲩⲟϩ ⲁϥⲉⲗ ⲥⲩⲙⲉⲱⲛ ⲉ̀ⲃⲟⲗ ⲛ̀ϧⲏⲧⲟⲩ ⲁϥⲥⲟⲛϩϥ ⲙ̀ⲡⲟⲩⲙ̀ⲑⲟ. ⲁ̀ ⲓⲱⲥⲏⲫ ⲇⲉ ϩⲟⲛϩⲉⲛ ⲉ̀ⲙⲁϩ ⲛ̀ⲛⲟⲩⲥⲟⲕ<sup class="footnote">40</sup> ⲛ̀ⲥⲟⲩⲟ̀ ⲛⲱⲟⲩ ⲟⲩⲟϩ ⲉ̀ⲧⲁⲥⲑⲟ ⲙ̀ⲡϩⲁⲧ ⲙ̀ⲡⲓⲟⲩⲁⲓ. ⲡⲓⲟⲩⲁⲓ ⲉ̀ⲣⲱϥ ⲙ̀ⲡⲉϥⲥⲟⲕ<sup class="footnote">41</sup>. ⲟⲩⲟϩ ⲉ̀ ϯⲱⲓⲕ ⲛⲱⲟⲩ ϩⲓ ⲫⲙⲱⲓⲧ. ⲟⲩⲟϩ ⲁⲥϣⲱⲡⲓ ⲙ̀ⲡⲁⲓⲣⲏϯ.</em></p>
+			<p>26. <em>Ⲁⲩⲧⲁⲗⲟ<sup class="footnote">42</sup> ⲙ̀ⲡⲓⲥⲟⲩⲟ̀ ⲉ̀ ⲛⲟⲩⲉ̀ⲉⲩ ⲁⲩϣⲉ ⲛⲱⲟⲩ ⲉ̀ⲃⲟⲗ ⲙ̀ⲙⲁⲩ.</em></p>
+			<p>27. <em>Ⲁ ⲟⲩⲁⲓ ⲇⲉ ⲉⲃⲟⲗ ⲙ̀ⲙⲱⲟⲩ ϯⲟⲩⲱ̀ ⲙ̀ⲡⲉϥⲥⲟⲕ ⲉ̀ ϯϧⲣⲉ ⲛ̀ⲛⲉϥⲉ̀ⲉⲩ ϧⲉⲛ ⲡⲓⲙⲁ ⲉⲧⲁⲩϣⲧⲟ ⲉ̀ⲣⲟϥ. ⲁϥⲛⲁⲩ ⲉ̀ ⲫⲙⲟⲩⲣ ⲙ̀ⲡⲉϥϩⲁⲧ. ⲛⲁϥⲭⲏ<sup class="footnote">43</sup> ϩⲓⲣⲱϥ ⲙ̀ⲡⲓⲥⲟⲕ<sup class="footnote">44</sup> ⲡⲉ.</em></p>
+			<p>28. <em>Ⲟⲩⲟϩ ⲡⲉϫⲁϥ ⲛ̀ⲛⲉϥⲥⲛⲏⲟⲩ ϫⲉ ⲁⲏϯ ⲙ̀ⲡⲁϩⲁⲧ ⲛⲏⲓ. ⲓⲥ<sup class="footnote">45</sup> ⲫⲁⲓ ϥⲭⲏ ϧⲉⲛ ⲡⲁⲥⲟⲕ. ⲟⲩⲟϩ ⲁⲩⲧⲱⲙⲧ<sup class="footnote">46</sup> ⲛ̀ϫⲉ ⲛⲟⲩϩⲏⲧ. ⲁⲩϣⲑⲟⲣⲧⲉⲣ<sup class="footnote">47</sup> ⲟⲩⲃⲉ ⲛⲟⲩⲉ̀ⲣⲏⲟⲩ ⲉⲩϫⲱ ⲙ̀ⲙⲟⲥ. ϫⲉ ⲟⲩ ⲡⲉ ⲫⲁⲓ ⲉⲧⲁ̀ ⲫϯ ⲁⲓϥ ⲛⲁⲛ.</em></p>
+			<p>29. <em>Ⲁⲩⲓ̀ ⲇⲉ ϩⲁ ⲓ̀ⲁ̀ⲕⲱⲃ ⲡⲟⲩⲓⲱⲧ ⲉ̀ ⲡⲕⲁϩⲓ ⲛ̀ⲭⲁⲛⲁⲁⲛ. ⲁⲩⲧⲁⲙⲟϥ<sup class="footnote">48</sup> ⲉ̀ ϩⲱⲃ ⲛⲓⲃⲉⲛ ⲉⲧⲁⲩϣⲱⲡⲓ ⲙ̀ⲙⲱⲟⲩ ⲉⲩϫⲱ ⲙ̀ⲙⲟⲥ.</em></p>
+			<p>30. <em>ϫⲉ ⲁ̀ⲡⲓⲣⲱⲙⲓ ⲥⲁϫⲓ ⲛⲉⲙⲁⲛ ⲡϭⲟⲓⲥ ⲙ̀ⲡⲓⲕⲁϩⲓ ϧⲉⲛ ϩⲁⲛⲥⲁϫⲓ ⲉⲩⲛⲁϣⲧ. ⲟⲩⲟϩ ⲁϥⲭⲁⲛ ϧⲉⲛ ⲡⲓϣⲧⲉⲕⲟ ⲙ̀ⲫⲣⲏϯ ⲛ̀ϩⲁⲛϫⲏⲣ ⲛ̀ⲧⲉ ⲡⲕⲁϩⲓ.</em></p>
+			<p>31. <em>Ⲡⲉϫⲁⲛ ⲇⲉ ⲛⲁϥ ϫⲉ ⲁⲛⲟⲛ ϩⲁⲛϩⲓⲣⲏⲛⲓⲕⲟⲥ<sup class="footnote">49</sup>. ⲛⲁⲛⲟⲛ ϩⲁⲛϫⲏⲣ ⲁⲛ.</em></p>
+			<p>32. <em>ⲧⲉⲛⲉⲣⲓ̅ⲃ̅ ⲛ̀ⲥⲟⲛ ϧⲁ ⲛⲉⲛϧⲣⲟϯ ⲙ̀ⲡⲉⲛⲓ̀ⲱⲧ. ⲡⲓⲟⲩⲁⲓ ϥϣⲟⲡ ⲁⲛ<sup class="footnote">50</sup> ⲡⲓⲕⲟⲩϫⲓ ⲇⲉ ϥⲭⲏ ⲛⲉⲙ ⲡⲛⲓⲱⲧ ⲙ̀ⲫⲟⲟⲩ ϧⲉⲛ ⲡⲕⲁϩⲓ ⲛ̀ⲭⲁⲛⲁⲁⲛ.</em></p>
+			<p>33. <em>Ⲡⲉϫⲉ ⲡⲓⲣⲱⲙⲓ ⲇⲉ ⲛⲁⲛ ⲡϭⲟⲓⲥ ⲙ̀ⲡⲓⲕⲁϩⲓ ϫⲉ ϧⲉⲛ ⲫⲁⲓ ⲉⲓⲉ̀ⲉⲙⲓ. ϫⲉ ⲛ̀ⲑⲱⲧⲉⲛ ϩⲁⲛϩⲏⲣⲏⲛⲓⲕⲟⲥ. ⲭⲁ ⲟⲩⲁⲓ ⲛ̀ⲛⲉⲧⲉⲛⲥⲛⲏⲟⲩ ⲙ̀ⲡⲁⲓⲙⲁ ⲛⲉⲙⲏⲓ. ⲡⲓⲥⲟⲩⲟ̀ ⲇⲉ ⲉⲧⲁ̀ⲣⲉⲧⲉⲛϣⲟⲡϥ. ⲛ̀ⲧⲉ ⲡⲉⲧⲉⲛⲏⲓ. ϭⲓⲧϥ ⲙⲁϣⲉ ⲛⲱⲧⲉⲛ.</em></p>
+			<p>34. <em>Ⲟⲩⲟϩ ⲁ̀ⲛⲓⲟⲩⲓ̀ ⲙ̀ⲡⲉⲧⲉⲛⲕⲟⲩϫⲓ<sup class="footnote">51</sup> ⲛ̀ⲥⲟⲛ ϩⲁⲣⲟⲓ. ⲉⲓⲉⲉ̀ⲙⲓ<sup class="footnote">52</sup> ϫⲉ ⲛ̀ⲑⲱⲧⲉⲛ ϩⲁⲛϫⲏⲣ ⲁⲛ ⲁⲗⲗⲁ ⲛ̀ⲑⲱⲧⲉⲛ ϩⲁⲛϩⲏⲣⲓⲛⲏⲕⲟⲥ.<sup class="footnote">53</sup> ⲟⲩⲟϩ ⲉⲓⲉ̀ϯ ⲙ̀ⲡⲉⲧⲉⲛⲥⲟⲛ ⲛⲱⲧⲉⲛ ⲉ̀ⲣⲉⲧⲉⲛⲉ̀ⲉⲣⲓⲉⲃϣⲱⲧ<sup class="footnote">54</sup> ϩⲓϫⲉⲛ ⲡⲓⲕⲁϩⲓ.</em></p>
+			<p>35. <em>Ⲁⲥϣⲱⲡⲓ ⲇⲉ ⲉ̀ⲧⲁⲩϫⲱϣ ⲛ̀ⲛⲟⲩⲥⲟⲕ ⲉ̀ⲡⲉⲥⲏⲧ. ⲛⲁⲣⲉ<sup class="footnote">55</sup> ⲫⲙⲟⲩⲣ ⲙ̀ⲡϩⲁⲧ ⲙ̀ⲡⲓⲟⲩⲁⲓ ϧⲉⲛ ⲡⲉϥⲥⲟⲕ. ⲟⲩⲟϩ ⲁⲩⲛⲁⲩ ⲉ̀ ⲛⲓⲙⲟⲩⲣ ⲛ̀ⲧⲉ ⲛⲟⲩϩⲁⲧ<sup class="footnote">56</sup>. ⲛ̀ⲑⲱⲟⲩ ⲛⲉⲙ ⲡⲟⲩⲓⲱⲧ. ⲁⲩⲉⲣϩⲟϯ<sup class="footnote">57</sup>.</em></p>
+			<p>36. <em>Ⲡⲉϫⲉ ⲓ̀ⲁ̀ⲕⲱϩ ⲡⲟⲩⲓⲱⲧ ⲛⲱⲟⲩ. ϫⲉ ⲁ̀ⲛⲟⲕ ⲁ̀ⲧⲉⲧⲉⲛⲁⲓⲧ ⲛ̀ⲁⲧϣⲏⲣⲓ. ⲓⲱⲥⲏⲫ ϥϣⲟⲡ ⲁⲛ. ⲥⲩⲙⲉⲱⲛ ϥϣⲟⲡ ⲁⲛ. ⲧⲉⲧⲉⲛⲛⲁϭⲓ<sup class="footnote">58</sup> ⲙ̀ⲡⲕⲉⲃⲉⲛⲓⲁ̀ⲙⲓⲛ. ⲁ̀ ⲛⲁⲓ ⲧⲏⲣⲟⲩ ⲓ̀ ⲉ̀ϩⲣⲏⲓ ⲉ̀ϫⲱⲓ.</em></p>
+			<p>37. <em>Ⲡⲉϫⲉ ⲣⲟⲩⲃⲏⲛ ⲇⲉ ⲙ̀ⲡⲉϥⲓⲱⲧ ⲉϥϫⲱ ⲙ̀ⲙⲟⲥ. ϫⲉ ϧⲱⲧⲉⲃ ⲙ̀ⲡⲁϣⲏⲣⲓ ⲃ̅. ⲉϣⲱⲡ ⲁⲓϣⲧⲉⲙⲉⲛϥ ϩⲁⲣⲟⲕ ⲙⲏⲓϥ ⲉ̀ϧⲣⲏⲓ ⲉ̀ ⲛⲁϫⲓϫ<sup class="footnote">59</sup>. ⲁⲛⲟⲕ<sup class="footnote">60</sup> ⲉⲧⲛⲁⲉⲛϥ<sup class="footnote">61</sup> ⲉ̀ⲡϣⲱⲓ ϩⲁⲣⲟⲕ.</em></p>
+			<p>38. <em>ⲛ̀ⲑⲟϥ ⲇⲉ ⲡⲉϫⲁϥ ϫⲉ ⲛ̀ⲛⲉ ⲡⲁϣⲏⲣⲓ ⲓ̀<sup class="footnote">62</sup> ⲛⲉⲙⲱⲧⲉⲛ. ϫⲉ ⲡⲉϥⲕⲉⲥⲟⲛ ⲁϥⲙⲟⲩ ⲛ̀ⲑⲟϥ<sup class="footnote">63</sup> ⲙ̀ⲙⲁⲩⲁⲧϥ ⲉⲧϣⲟⲡ<sup class="footnote">64</sup> ⲛⲏⲓ ⲉ̀ⲃⲟⲗ ϧⲉⲛ ⲧⲁⲓⲥϩⲓⲙⲓ. ⲙⲏⲡⲟⲧⲉ ⲛ̀ⲧⲉ ⲟⲩϣⲱⲛⲓ ⲧⲁϩⲟϥ ϩⲓ ⲡⲓⲙⲱⲓⲧ. ⲉ̀ⲧⲉⲧⲉⲛⲛⲁϣⲉ ⲛⲱⲧⲉⲛ ϩⲓⲱ̀ⲧϥ. ⲛ̀ⲧⲉⲧⲉⲛⲉⲗ<sup class="footnote">65</sup> ⲧⲁⲙⲉⲧϧⲉⲗⲗⲟ ⲉ̀ ⲁ̀ⲙⲉⲛϯ ϧⲉⲛ ⲟⲩⲙ̀ⲕⲁϩ ⲛ̀ϩⲏⲧ.</em></p>
 			<p class="footnote">— 2. Vat. <em>ϣⲱⲡ ϩⲁⲛⲕⲟⲩϫⲓ ⲛ̀ϧⲣⲏⲟⲩⲓ ⲛⲁⲛ</em>.</p>
 			<p class="footnote">— 3. Vat. + <em>ⲉⲭⲏⲙⲓ</em>.</p>
 			<p class="footnote">— 4. Vat. + <em>ϩⲓ ⲡⲓⲙⲱⲓⲧ</em>.</p>
