--- a/coptic/mallon/index.html
+++ b/coptic/mallon/index.html
@@ -21816,6 +21816,7 @@
 			<p>36. <em>Ⲡⲉϫⲉ ⲓ̀ⲁ̀ⲕⲱϩ ⲡⲟⲩⲓⲱⲧ ⲛⲱⲟⲩ. ϫⲉ ⲁ̀ⲛⲟⲕ ⲁ̀ⲧⲉⲧⲉⲛⲁⲓⲧ ⲛ̀ⲁⲧϣⲏⲣⲓ. ⲓⲱⲥⲏⲫ ϥϣⲟⲡ ⲁⲛ. ⲥⲩⲙⲉⲱⲛ ϥϣⲟⲡ ⲁⲛ. ⲧⲉⲧⲉⲛⲛⲁϭⲓ<sup class="footnote">58</sup> ⲙ̀ⲡⲕⲉⲃⲉⲛⲓⲁ̀ⲙⲓⲛ. ⲁ̀ ⲛⲁⲓ ⲧⲏⲣⲟⲩ ⲓ̀ ⲉ̀ϩⲣⲏⲓ ⲉ̀ϫⲱⲓ.</em></p>
 			<p>37. <em>Ⲡⲉϫⲉ ⲣⲟⲩⲃⲏⲛ ⲇⲉ ⲙ̀ⲡⲉϥⲓⲱⲧ ⲉϥϫⲱ ⲙ̀ⲙⲟⲥ. ϫⲉ ϧⲱⲧⲉⲃ ⲙ̀ⲡⲁϣⲏⲣⲓ ⲃ̅. ⲉϣⲱⲡ ⲁⲓϣⲧⲉⲙⲉⲛϥ ϩⲁⲣⲟⲕ ⲙⲏⲓϥ ⲉ̀ϧⲣⲏⲓ ⲉ̀ ⲛⲁϫⲓϫ<sup class="footnote">59</sup>. ⲁⲛⲟⲕ<sup class="footnote">60</sup> ⲉⲧⲛⲁⲉⲛϥ<sup class="footnote">61</sup> ⲉ̀ⲡϣⲱⲓ ϩⲁⲣⲟⲕ.</em></p>
 			<p>38. <em>ⲛ̀ⲑⲟϥ ⲇⲉ ⲡⲉϫⲁϥ ϫⲉ ⲛ̀ⲛⲉ ⲡⲁϣⲏⲣⲓ ⲓ̀<sup class="footnote">62</sup> ⲛⲉⲙⲱⲧⲉⲛ. ϫⲉ ⲡⲉϥⲕⲉⲥⲟⲛ ⲁϥⲙⲟⲩ ⲛ̀ⲑⲟϥ<sup class="footnote">63</sup> ⲙ̀ⲙⲁⲩⲁⲧϥ ⲉⲧϣⲟⲡ<sup class="footnote">64</sup> ⲛⲏⲓ ⲉ̀ⲃⲟⲗ ϧⲉⲛ ⲧⲁⲓⲥϩⲓⲙⲓ. ⲙⲏⲡⲟⲧⲉ ⲛ̀ⲧⲉ ⲟⲩϣⲱⲛⲓ ⲧⲁϩⲟϥ ϩⲓ ⲡⲓⲙⲱⲓⲧ. ⲉ̀ⲧⲉⲧⲉⲛⲛⲁϣⲉ ⲛⲱⲧⲉⲛ ϩⲓⲱ̀ⲧϥ. ⲛ̀ⲧⲉⲧⲉⲛⲉⲗ<sup class="footnote">65</sup> ⲧⲁⲙⲉⲧϧⲉⲗⲗⲟ ⲉ̀ ⲁ̀ⲙⲉⲛϯ ϧⲉⲛ ⲟⲩⲙ̀ⲕⲁϩ ⲛ̀ϩⲏⲧ.</em></p>
+			<p class="footnote">— 1. Vat. <em>ⲉⲙⲁⲩ</em>.</p>
 			<p class="footnote">— 2. Vat. <em>ϣⲱⲡ ϩⲁⲛⲕⲟⲩϫⲓ ⲛ̀ϧⲣⲏⲟⲩⲓ ⲛⲁⲛ</em>.</p>
 			<p class="footnote">— 3. Vat. + <em>ⲉⲭⲏⲙⲓ</em>.</p>
 			<p class="footnote">— 4. Vat. + <em>ϩⲓ ⲡⲓⲙⲱⲓⲧ</em>.</p>
@@ -21881,6 +21882,40 @@
 			<p class="footnote">— 64. Vat. <em>ⲉⲧⲥⲟϫⲡ</em>.</p>
 			<p class="footnote">— 65. Vat. <em>ⲟⲩⲟϩ ⲧⲉⲧⲉⲛⲛⲁⲉⲗ</em>.</p>
 			<p>XLIII.</p>
+			<p>1. <em>Ⲁ ⲡⲓϩⲕⲟ ⲇⲉ ϫⲉⲙⲛⲟⲙϯ ϩⲓϫⲉⲛ ⲡⲓⲕⲁϩⲓ.</em></p>
+			<p>2. <em>Ⲁⲥϣⲱⲡⲓ ⲉⲧⲁⲩⲟⲩⲱⲙ ⲙ̀ⲡⲓⲥⲟⲩⲟ̀ ⲉ̀ⲧⲁⲩⲉⲛϥ ⲉ̀ⲃⲟⲗ ϧⲉⲛ ⲭⲏⲙⲓ. ⲡⲉϫⲉ ⲓ̀ⲁ̀ⲕⲱⲃ ⲡⲟⲩⲓⲱⲧ ⲛⲱⲟⲩ<sup class="footnote">1</sup>. ϫⲉ ⲙⲁϣⲉ ⲛⲱⲧⲉⲛ<sup class="footnote">2</sup> ϣⲉⲡ ϩⲁⲛⲕⲟⲩϫⲓ ⲛ̀ϧⲣⲏⲟⲩⲓ̀ ⲛⲁⲛ<sup class="footnote">3</sup>.</em></p>
+			<p>3. <em>Ⲡⲉϫⲉ ⲓ̀ⲟⲩⲇⲁⲥ ⲇⲉ ⲛⲁϥ ⲉϥϫⲱ ⲙ̀ⲙⲟⲥ. ϫⲉ ϧⲉⲛ ⲟⲩⲙⲉⲧⲙⲉⲑⲣⲉ<sup class="footnote">4</sup>. ⲁϥⲉⲣⲙⲉⲑⲣⲉ ⲛⲁⲛ ⲛ̀ϫⲉ ⲡⲓⲣⲱⲙⲓ ⲉϥϫⲱ ⲙ̀ⲙⲟⲥ. ϫⲉ ⲛ̀ⲛⲉⲧⲉⲛⲛⲁⲩ ⲉ̀ ⲡⲁϩⲟ ⲙ̀ⲡⲉⲧⲉⲛⲕⲟⲩϫⲓ ⲛ̀ⲥⲟⲛ<sup class="footnote">5</sup> ⲛⲉⲙⲱⲧⲉⲛ ⲁⲛ.</em></p>
+			<p>4. <em>Ⲓⲥϫⲉ ⲟⲩⲛ ⲭⲛⲁⲟⲩⲱⲣⲡ ⲙ̀ⲡⲉⲛⲥⲟⲛ<sup class="footnote">6</sup> ⲛⲉⲙⲁⲛ ⲧⲉⲛⲛⲁϣⲉ ⲛⲁⲛ ⲉ̀ϧⲣⲏⲓ ⲛ̀ⲧⲉⲛϣⲉⲡ ϩⲁⲛ ⲕⲟⲩϫⲓ ⲛ̀ϧⲣⲏⲟⲩⲓ̀<sup class="footnote">7</sup> ⲛⲁⲛ.</em></p>
+			<p>5. <em>Ⲓⲥϫⲉ ⲇⲉ<sup class="footnote">8</sup> ⲭⲛⲁⲟⲩⲱⲣⲡ ⲙ̀ⲡⲉⲛⲥⲟⲛ<sup class="footnote">9</sup> ⲛⲉⲙⲁⲛ ⲁⲛ. ⲓⲉ ⲧⲉⲛⲛⲁϣⲉ<sup class="footnote">10</sup> ⲁⲛ. ⲁ̀ ⲡⲓⲣⲱⲙⲓ ⲅⲁⲣ ϫⲟⲥ ⲛⲁⲛ ⲉϥϫⲱ ⲙ̀ⲙⲟⲥ. ϫⲉ ⲛ̀ⲛⲉⲧⲉⲛⲛⲁⲩ ⲉ̀ ⲡⲁϩⲟ. ⲙ̀ⲡⲉⲧⲉⲛⲕⲟⲩϫⲓ ⲛ̀ⲥⲟⲛ<sup class="footnote">11</sup> ⲭⲏ ⲛⲉⲙⲱⲧⲉⲛ ⲁⲛ.</em></p>
+			<p>6. <em>Ⲡⲉϫⲉ ⲡⲓ︤ⲥ︦ⲗ︥ ⲇⲉ. ϫⲉ ⲉⲑⲃⲉ ⲟⲩ ⲁⲣⲉⲧⲉⲛⲉⲣ ⲡⲁⲓϩⲱⲃ<sup class="footnote">12</sup> ⲛⲏⲓ. ⲁ̀ⲧⲉⲧⲉⲛⲧⲁⲙⲉ ⲡⲓⲣⲱⲙⲓ. ϫⲉ ⲟⲩⲟⲛⲧⲉⲧⲉⲛ ⲥⲟⲛ ⲙ̀ⲙⲁⲩ.</em></p>
+			<p>7. <em>Ⲛⲑⲱⲟⲩ ⲇⲉ ⲡⲉϫⲱⲟⲩ ϫⲉ ϧⲉⲛ ⲟⲩϣⲓⲛⲓ. ⲁϥϣⲉⲛⲧⲉⲛ ⲛ̀ϫⲉ ⲡⲓⲣⲱⲙⲓ ⲉ̀ ⲡⲉⲛϫⲱⲟⲩ. ⲉϥϫⲱ ⲙ̀ⲙⲟⲥ. ϫⲉ ⲁⲛ ⲉ̀ⲧⲓ. ⲡⲉⲧⲉⲛⲓⲱⲧ ⲟⲛϧ. ⲓⲉ ⲁⲛ ⲟⲩⲟⲛⲧⲉⲧⲉⲛⲥⲟⲛ ⲙ̀ⲙⲁⲩ. ⲟⲩⲟϩ ⲁⲛⲧⲁⲙⲟϥ ⲕⲁⲧⲁ ⲡⲁⲓϫⲓⲛϣⲓⲛⲓ. ⲙⲏ ⲛⲁⲛⲉ̀ⲙⲓ ⲁⲛⲟⲛ ⲡⲉ<sup class="footnote">13</sup>. ϫⲉ ϥⲛⲁϫⲟⲥ ⲛⲁⲛ ϫⲉ ⲁⲛⲓ ⲡⲉⲧⲉⲛⲥⲟⲛ ϩⲁⲣⲟⲓ.</em></p>
+			<p>8. <em>Ⲡⲉϫⲉ ⲓⲟⲩⲇⲁⲥ ⲇⲉ ⲙ̀ⲡⲓ︤ⲥ︦ⲗ︥ ⲡⲉϥⲓⲱⲧ. ϫⲉ ⲟⲩⲱⲣⲡ ⲙ̀ⲡⲓⲁ̀ⲗⲟⲩ ⲛⲉⲙⲏⲓ. ⲛ̀ⲧⲉⲛⲧⲱⲟⲩⲛ ⲛ̀ⲧⲉⲛϣⲉ ⲛⲁⲛ<sup class="footnote">14</sup>. ϩⲓⲛⲁ ⲛ̀ⲧⲉⲛⲱⲛϧ. ⲟⲩⲟϩ ⲛ̀ⲧⲉⲛϣⲧⲉⲙⲙⲟⲩ. ⲁⲛⲟⲛ ⲛⲉⲙⲁⲕ. ⲛⲉⲙ ⲡⲉⲛⲥⲟⲃϯ.</em></p>
+			<p>9. <em>Ⲁⲛⲟⲕ ⲇⲉ ϯⲉⲣⲡϣⲧⲱⲣⲓ ⲙ̀ⲙⲟϥ. ⲕⲱϯ ⲛ̀ⲥⲱϥ ⲉ̀ⲃⲟⲗ ϧⲉⲛ ⲧⲁϫⲓϫ<sup class="footnote">15</sup>. Ⲉϣⲱⲡ ⲁⲓϣⲧⲉⲙⲉⲛϥ ϩⲁⲣⲟⲕ<sup class="footnote">16</sup> ⲛ̀ⲧⲁⲧⲁϩⲟϥ ⲉ̀ⲣⲁⲧϥ ⲙ̀ⲡⲉⲕⲙ̀ⲑⲟ ⲉⲓⲉ̀ϣⲱⲡⲓ ⲉⲓⲟⲓ ⲛ̀ⲣⲉϥⲛⲟⲃⲓ ⲉ̀ⲣⲟⲕ<sup class="footnote">17</sup>. ⲛ̀ⲛⲓⲉ̀ϩⲟⲟⲩ ⲧⲏⲣⲟⲩ.</em></p>
+			<p>10. <em>Ⲉⲃⲏⲗ ⲅⲁⲣ<sup class="footnote">18</sup> ϫⲉ ⲁⲛⲱⲥⲕ ⲛⲉ ⲓⲥ ⲑⲛⲉⲓ ⲁⲛⲛⲁⲕⲟⲧⲧⲉⲛ<sup class="footnote">19</sup> ⲡⲉ ⲛ̀ⲥⲟⲡ ⲃ̅.</em></p>
+			<p>11. <em>Ⲡⲉϫⲉ ⲡⲓ︤ⲥ︦ⲗ︥ ϫⲉ ⲡⲟⲩⲓⲱⲧ ⲛⲱⲟⲩ ϫⲉ ⲓⲥϫⲉ ⲡⲁⲓⲣⲏϯ ⲡⲉ ⲁ̀ⲣⲓⲟⲩⲓ̀ ⲙ̀ⲫⲁⲓ. ϭⲓ ⲉ̀ⲃⲟⲗ ϧⲉⲛ ⲛⲓⲟⲩⲧⲁⲩϩ ⲛ̀ⲧⲉ ⲡⲓⲕⲁϩⲓ. ϧⲉⲛ ⲛⲉⲧⲉⲛⲙⲟⲕⲓ. ⲁ̀ⲗⲓⲟⲩⲓ̀ ⲉ̀ϧⲣⲏⲓ ⲛ̀ϩⲁⲛⲧⲁⲓⲟ ⲙ̀ⲡⲓⲣⲱⲙⲓ ⲉ̀ⲃⲟⲗ ϧⲉⲛ ⲡⲓⲥⲟⲛϯ. ⲛⲉⲙ ⲡⲓⲉ̀ⲃⲓⲱ̀ ⲟⲩⲥⲑⲩⲛⲟⲩϥⲓ<sup class="footnote">20</sup>. ⲛⲉⲙ ⲟⲩⲥⲧⲁⲕⲧⲏ. ⲛⲉⲙ ⲟⲩⲧⲉⲣⲉⲃⲓⲛⲑⲓⲥ<sup class="footnote">21</sup>. ⲛⲉⲙ ϩⲁⲛⲕⲁⲣⲓⲁ̀.</em></p>
+			<p>12. <em>Ⲟⲩⲟϩ ⲁ̀ⲗⲓⲟⲩⲓ̀ ⲙ̀ⲡⲓϩⲁⲧ ⲉϥⲕⲏⲃ ϧⲉⲛ ⲛⲉⲧⲉⲛϫⲓϫ. ⲡⲓϩⲁⲧ ⲉⲧⲁⲩⲧⲁⲥⲑⲟϥ ⲉ̀ⲣⲱⲧⲉⲛ ϧⲉⲛ ⲛⲉⲧⲉⲛⲥⲟⲕ. ⲙⲁⲧⲁⲥⲑⲟϥ ⲛⲉⲙⲱⲧⲉⲛ. ⲙⲏⲡⲟⲧⲉ ⲟⲩⲙⲉⲧⲁⲧⲉ̀ⲙⲓ ⲡⲉⲧⲁⲥϣⲱⲡⲓ.</em></p>
+			<p>13. <em>Ⲟⲩⲟϩ ϭⲓ ⲙ̀ⲡⲉⲧⲉⲛⲕⲉⲥⲟⲛ ⲛⲉⲙⲱⲧⲉⲛ. ⲧⲉⲛⲑⲏⲛⲟⲩ<sup class="footnote">22</sup> ⲙⲁϣⲉ ⲛⲱⲧⲉⲛ ⲉ̀ϧⲣⲏⲓ ϩⲁ ⲡⲓⲣⲱⲙⲓ.</em></p>
+			<p>14. <em>Ⲡⲁⲛⲟⲩϯ ⲇⲉ ⲉϥⲉ̀ϯ ⲛⲱⲧⲉⲛ ⲛ̀ⲟⲩϩⲙⲟⲧ ⲙ̀ⲡⲉⲙⲑⲟ ⲙ̀ⲡⲓⲣⲱⲙⲓ. ⲉϥⲉ̀ⲧⲁⲟⲩⲟ̀<sup class="footnote">23</sup> ⲙ̀ⲡⲉⲧⲉⲛⲕⲉⲥⲟⲛ ⲛⲉⲙⲱⲧⲉⲛ. ⲛⲉⲙ ⲡⲕⲉⲃⲉⲛⲓⲁ̀ⲙⲓⲛ. ⲁⲛⲟⲕ ⲙⲉⲛ ⲅⲁⲣ ⲙ̀ⲫⲣⲏϯ ⲉⲧⲁⲓⲉⲣⲁⲧϣⲏⲣⲓ. ⲁⲓⲉⲣⲁⲧϣⲏⲣⲓ.</em></p>
+			<p>15. <em>Ⲁⲩϭⲓ ⲇⲉ ⲛ̀ϫⲉ ⲛⲓⲣⲱⲙⲓ ⲛ̀ⲛⲁⲓⲧⲁⲓⲟ ⲟⲩⲟϩ ⲡⲓϩⲁⲧ ⲉϥⲕⲏⲃ ⲁⲩϭⲓⲧϥ ϧⲉⲛ ⲛⲟⲩϫⲓϫ<sup class="footnote">24</sup>. ⲛⲉⲙ ⲃⲉⲛⲓⲁ̀ⲙⲓⲛ. ⲁⲩⲧⲱⲟⲩⲛ<sup class="footnote">25</sup> ⲁⲩⲓ̀ ⲉ̀ϧⲣⲏⲓ ⲉ̀ ⲭⲏⲙⲓ. ⲁⲩⲟϩⲓ<sup class="footnote">26</sup> ⲉ̀ⲣⲁⲧⲟⲩ ⲙ̀ⲡⲉⲙⲑⲟ ⲛ̀ⲓⲱⲥⲏⲫ.</em></p>
+			<p>16. <em>Ⲁϥⲛⲁⲩ ⲇⲉ ⲉ̀ⲣⲱⲟⲩ ⲛ̀ϫⲉ ⲓⲱⲥⲏⲫ ⲛⲉⲙ ⲃⲉⲛⲓⲁ̀ⲙⲓⲛ ⲡⲉϥⲥⲟⲛ ⲛ̀ϣⲉⲛⲙⲁⲩ. ⲟⲩⲟϩ ⲡⲉϫⲁϥ ⲙ̀ⲫⲏ ⲉⲧⲭⲏ ϩⲓϫⲉⲛ ⲡⲉϥⲏⲓ. ϫⲉ ⲁ̀ⲗⲓⲟⲩⲓ̀ ⲛ̀ⲛⲁⲓⲣⲱⲙⲓ ⲉ̀ϧⲟⲩⲛ ⲉ̀ ⲡⲓⲏⲓ. ϣⲉⲧ ϩⲁⲛⲫⲓⲥⲓ<sup class="footnote">27</sup> ⲟⲩⲟϩ ⲥⲉⲃⲧⲱⲧⲟⲩ. ⲁ̀ⲣⲉ ⲛⲁⲓⲣⲱⲙⲓ ⲅⲁⲣ ⲛⲁⲟⲩⲱⲙ ⲛ̀ⲟⲩⲱⲓⲕ<sup class="footnote">28</sup> ⲛⲉⲙⲏⲓ ⲙ̀ⲙⲉⲣⲓ.</em></p>
+			<p>17. <em>Ⲁϥⲓ̀ⲣⲓ ⲇⲉ ⲛ̀ϫⲉ ⲡⲓⲣⲱⲙⲓ. ⲕⲁⲧⲁⲫⲣⲏϯ ⲉⲧⲁ̀ ⲓⲱⲥⲏⲫ ϫⲟⲥ ⲛⲁϥ.</em></p>
+			<p>18. <em>ⲉⲧⲁⲩⲛⲁⲩ ⲇⲉ ⲛ̀ϫⲉ ⲛⲓⲣⲱⲙⲓ. ϫⲉ ⲁⲩⲉ̀ⲛⲟⲩ ⲉ̀ϧⲟⲩⲛ ⲉ̀ⲡⲏⲓ ⲛ̀ⲓⲱⲥⲏⲫ. ⲡⲉϫⲱⲟⲩ ϫⲉ ⲉⲑⲃⲉ ⲡⲓϩⲁⲧ ⲉⲧⲁⲩⲧⲁⲥⲑⲟϥ ⲉ̀ⲣⲟⲛ ⲛ̀ϣⲟⲣⲡ ϧⲉⲛ ⲛⲉⲛⲙⲟⲕⲓ<sup class="footnote">29</sup>. ⲁⲛⲟⲛ ⲥⲉⲓ̀ⲛⲓ ⲙ̀ⲙⲟⲛ ⲉ̀ϧⲟⲩⲛ ⲉ̀ϭⲓⲧⲉⲛ<sup class="footnote">30</sup> ⲛ̀ϫⲟⲛⲥ. ⲟⲩⲟϩ ⲉ̀ϯⲙ̀ⲕⲁϩ ⲛⲁⲛ. ⲉⲡϫⲓⲛⲁⲓⲧⲉⲛ ⲙ̀ⲃⲱⲕ ⲛⲉⲙ ⲛⲉⲛⲉ̀ⲉⲩ.</em></p>
+			<p>19. <em>Ⲁⲩⲓ̀ ⲇⲉ ϩⲁ ⲡⲓⲣⲱⲙⲓ ⲉⲧⲭⲏ ϩⲓϫⲉⲛ ⲡⲏⲓ ⲛ̀ⲓⲱⲥⲏⲫ.</em></p>
+			<p>20. <em>Ⲁⲩⲥⲁϫⲓ<sup class="footnote">31</sup> ⲛⲉⲙⲁϥ ϧⲉⲛ ⲡⲓϣⲑⲟⲙ ⲛ̀ⲧⲉ ⲡⲓⲏⲓ ⲉⲩϫⲱ ⲙ̀ⲙⲟⲥ. ϫⲉ ⲧⲉⲛϯϩⲟ ⲉ̀ⲣⲟⲕ ⲡⲉⲛϭⲟⲓⲥ ⲁⲛⲓ̀ ⲉ̀ϧⲣⲏⲓ ⲛ̀ϣⲟⲣⲡ. ⲉ̀ϣⲉⲡ ϩⲁⲛϧⲣⲏⲟⲩⲓ̀ ⲛⲁⲛ.</em></p>
+			<p>21. <em>Ⲁⲥϣⲱⲡⲓ ⲉⲧⲁⲛⲓ̀ ⲉ̀ⲡⲓⲙⲁ ⲉⲧⲁⲛϣⲧⲟ ⲉ̀ⲣⲟϥ. ⲁⲛⲟⲩⲱⲛ ⲛ̀ⲛⲉⲛⲥⲟⲕ. ⲟⲩⲟϩ<sup class="footnote">32</sup> ⲁⲛϫⲉⲙ ⲡϩⲁⲧ ⲙ̀ⲡⲓⲟⲩⲁⲓ ⲡⲓⲟⲩⲁⲓ ⲙ̀ⲙⲟⲛ ϧⲉⲛ ⲡⲉϥⲥⲟⲕ. ⲡⲉⲛϩⲁⲧ ϧⲉⲛ ⲟⲩϣⲓ ⲁⲛⲧⲁⲥⲑⲟϥ ϯⲛⲟⲩ ϧⲉⲛ ⲛⲉⲛϫⲓϫ.</em></p>
+			<p>22. <em>Ⲟⲩⲟϩ ⲁ̀ ⲛⲉⲛⲕⲉϩⲁⲧ<sup class="footnote">33</sup> ⲛⲉⲙⲁⲛ. ⲉ̀ϣⲉⲡ ϩⲁⲛϧⲣⲏⲟⲩⲓ̀ ⲛⲁⲛ. ⲧⲉⲛⲉ̀ⲙⲓ<sup class="footnote">34</sup> ⲁⲛ ϫⲉ ⲛⲓⲙ. ⲁϥϩⲓ ⲡⲓϩⲁⲧ<sup class="footnote">35</sup> ⲉϧⲣⲏⲓ ⲉ ⲛⲉⲛⲥⲟⲕ.</em></p>
+			<p>23. <em>Ⲡⲉϫⲁϥ ⲇⲉ ⲛⲱⲟⲩ ⲛ̀ϫⲉ ⲡⲓⲣⲱⲙⲓ. ϫⲉ ⲓ̀ⲗⲉⲱⲥ ⲛⲱⲧⲉⲛ ⲙ̀ⲡⲉⲣ ⲉⲣϩⲟϯ. ⲡⲉⲧⲉⲛⲛⲟⲩϯ ⲟⲩⲟϩ ⲫϯ ⲛ̀ⲧⲉ ⲛⲉⲧⲉⲛⲓⲟϯ. ⲁϥϯ ⲛⲱⲧⲉⲛ ⲛ̀ϩⲁⲛⲁ̀ϩⲱⲣ ϧⲉⲛ ⲛⲉⲧⲉⲛⲥⲟⲕ. ⲡⲉⲧⲉⲛϩⲁⲧ ⲇⲉ ⲁⲓⲟⲩⲱ̀ ⲉⲓϭⲓ ⲙ̀ⲙⲟϥ ϧⲉⲛ ⲟⲩⲇⲓⲕⲓⲙⲏ<sup class="footnote">36</sup>. ⲟⲩⲟϩ ⲁϥⲉⲛ ⲥⲩⲙⲉⲱⲛ<sup class="footnote">37</sup> ⲉⲃⲟⲗ ϩⲁⲣⲱⲟⲩ.</em></p>
+			<p>24. <em>Ⲁⲩⲉⲛⲙⲱⲟⲩ<sup class="footnote">38</sup>. ⲁⲩⲓⲁⲣⲁⲧⲟⲩ. ⲁϥϯϧⲣⲉ<sup class="footnote">39</sup> ⲛ̀ⲛⲟⲩⲉ̀ⲉⲩ.</em></p>
+			<p>25. <em>Ⲟⲩⲟϩ<sup class="footnote">40</sup> ⲁⲩⲥⲉⲃⲧⲉ ⲛⲓⲧⲁⲓⲟ ⲇⲉ. ϣⲁⲧⲉ ⲓⲱⲥⲏⲫ ⲓ̀ ⲉ̀ϧⲟⲩⲛ ⲙ̀ⲙⲉⲣⲓ. ⲁⲩⲥⲱⲧⲉⲙ ⲅⲁⲣ ϫⲉ ⲁ̀ⲣⲉ ⲓⲱⲥⲏⲫ<sup class="footnote">41</sup> ⲙⲉⲩⲓ̀ ⲉ̀ ⲟⲩⲱⲙ ⲙ̀ⲡⲓⲙⲁ<sup class="footnote">42</sup> ⲉ̀ⲧⲉⲙⲙⲁⲩ.</em></p>
+			<p>26. <em>Ⲁϥⲓ̀ ⲇⲉ ⲛ̀ϫⲉ ⲓⲱⲥⲏⲫ ⲉ̀ϧⲟⲩⲛ ⲉ̀ⲡⲓⲏⲓ. ⲟⲩⲟϩ ⲁⲩⲓ̀ⲛⲓ ⲛ̀ⲛⲓⲇⲱⲣⲟⲛ ⲛⲁϥ ⲉⲡⲓⲏⲓ. ⲛⲏ ⲉ̀ⲛⲁⲩⲭⲏ ϧⲉⲛ ⲛⲟⲩϫⲓϫ. ⲁⲩϩⲓⲧⲟⲩ<sup class="footnote">43</sup> ⲉϫⲉⲛ ⲡⲟⲩϩⲟ ϩⲓϫⲉⲛ<sup class="footnote">44</sup> ⲡⲓⲕⲁϩⲓ ⲁⲩⲟⲩⲱϣⲧ<sup class="footnote">45</sup> ⲙ̀ⲙⲟϥ.</em></p>
+			<p>27. <em>Ⲁϥϣⲉⲛⲟⲩ ⲇⲉ ϫⲉ ⲁ̀ⲣⲉⲧⲉⲛⲉⲣⲟⲩ. ⲟⲩⲟϩ ⲡⲉϫⲁϥ ⲛⲱⲟⲩ. ϫⲉ ϥⲟⲩⲟϫ ⲛ̀ϫⲉ ⲡⲉⲧⲉⲛⲓⲱⲧ. ⲡⲓϧⲉⲗⲗⲟ ⲉⲧⲁⲣⲉⲧⲉⲛϫⲟⲥ. ⲉ̀ⲧⲓ ϥⲟⲛϧ.</em></p>
+			<p>28. <em>Ⲛⲑⲱⲟⲩ ⲇⲉ ⲡⲉϫⲱⲟⲩ. ϫⲉ ϥⲟⲩⲟϫ ⲛ̀ϫⲉ ⲡⲉⲕⲁ̀ⲗⲟⲩ ⲡⲉⲛⲓⲱⲧ ⲉ̀ⲧⲓ ϥⲟⲛϧ. ⲟⲩⲟϩ ⲡⲉϫⲁϥ ϫⲉ ⲥⲙⲁⲣⲱⲟⲩⲧ ⲉ̀ⲃⲟⲗ ϩⲓⲧⲉⲛ ⲫϯ<sup class="footnote">46</sup> ⲛ̀ϫⲉ ⲡⲓⲣⲱⲙⲓ ⲉⲧⲉⲙⲙⲁⲩ. (ⲟⲩⲟϩ ⲡⲉϫⲁϥ ϫⲉ ⲁ̀ ⲫϯ ⲥⲙⲟⲩ ⲉ ⲡⲓⲣⲱⲙⲓ ⲉⲧⲉⲙⲙⲁⲩ<sup class="footnote">47</sup>) ⲟⲩⲟϩ ⲁⲩϩⲓⲧⲟⲩ ⲉ̀ϧⲣⲏⲓ ⲁⲩⲟⲩⲱϣⲧ ⲙ̀ⲙⲟϥ.</em></p>
+			<p>29. <em>Ⲁϥϫⲟⲩϣⲧ ⲇⲉ ⲉ̀ⲡϣⲱⲓ ⲛ̀ⲛⲉϥⲃⲁⲗ ⲛ̀ϫⲉ ⲓⲱⲥⲏⲫ. ⲁϥⲛⲁⲩ ⲉ̀ ⲃⲉⲛⲓⲁ̀ⲙⲓⲛ ⲡⲉϥⲥⲟⲛ ⲛ̀ϣⲉⲛⲙⲁⲩ. ⲟⲩⲟϩ ⲡⲉϫⲁϥ ϫⲉ ⲫⲁⲓ ⲡⲉ ⲡⲉⲧⲉⲛⲕⲟⲩϫⲓ ⲛ̀ⲥⲟⲛ. ⲫⲏ ⲉⲧⲁ̀ⲣⲉⲧⲉⲛϫⲟⲥ ⲉ̀ⲉⲛϥ ϩⲁⲣⲟⲓ. ⲟⲩⲟϩ ⲡⲉϫⲁϥ ϫⲉ ⲉ̀ⲣⲉ ⲫϯ ⲛⲁⲓ ⲛⲁⲕ ⲡⲁϣⲏⲣⲓ.</em></p>
+			<p>30. <em>Ⲁϥϣⲑⲟⲣⲧⲉⲣ ⲇⲉ ⲛ̀ϫⲉ ⲓⲱⲥⲏⲫ. ⲛⲁⲣⲉ ⲛⲉϥⲙⲁϧⲧ ⲅⲁⲣ ⲫⲟⲛ<sup class="footnote">48</sup> ⲡⲉ. ⲉϫⲉⲛ ⲡⲉϥⲥⲟⲛ. ⲟⲩⲟϩ ⲛⲁϥⲕⲱϯ ⲛ̀ⲥⲁ ⲣⲓⲙⲓ ⲁϥϣⲉ ⲛⲁϥ ⲇⲉ ⲉϧⲟⲩⲛ ⲉⲡⲉϥⲧⲁⲙⲓⲟⲛ ⲁϥⲣⲓⲙⲓ.</em></p>
+			<p>31. <em>Ⲟⲩⲟϩ ⲉⲧⲁϥⲓⲁ ⲡⲉϥϩⲟ<sup class="footnote">49</sup> ⲉ̀ⲃⲟⲗ ⲁϥⲓ̀ ⲉⲃⲟⲗ. ⲁϥⲁⲙⲟⲛⲓ<sup class="footnote">50</sup> ⲛ̀ⲧⲟⲧϥ. Ⲟⲩⲟϩ ⲡⲉϫⲁϥ. ϫⲉ ⲭⲁⲱⲓⲕ ⲉ̀ϧⲣⲏⲓ.</em></p>
+			<p>32. <em>Ⲁⲩⲭⲱ<sup class="footnote">51</sup> ϧⲁⲣⲱϥ ⲙ̀ⲙⲁⲩⲁⲧϥ. ⲟⲩⲟϩ ⲁⲩⲭⲱ ϧⲁⲣⲱⲟⲩ ⲙ̀ⲙⲁⲩⲁⲧⲟⲩ. ⲁⲩⲭⲱ ϧⲁⲣⲱⲟⲩ ⲛ̀ⲛⲓⲣⲉⲙⲛ̀ⲭⲏⲙⲓ ⲙ̀ⲙⲁⲩⲁⲧⲟⲩ. ⲛⲏ ⲉⲛⲁⲩⲟⲩⲱⲙ ⲛⲉⲙⲁϥ. ⲛⲉ ⲙ̀ⲙⲟⲛ ϣϫⲟⲙ ⲅⲁⲣ ⲡⲉ ⲛ̀ⲛⲓⲣⲉⲙⲛ̀ⲭⲏⲙⲓ ⲉ ⲟⲩⲉⲙ ⲱⲓⲕ<sup class="footnote">52</sup>. ⲛⲉⲙ ⲛⲓϩⲉⲃⲣⲉⲟⲥ. ϫⲉ ⲛⲉ ⲟⲩⲥⲱϥ ⲅⲁⲣ ⲡⲉ ⲛ̀ⲛⲓⲣⲉⲙⲛ̀ⲭⲏⲙⲓ. ⲡⲉⲙⲁⲛ̀ⲉ̀ⲥⲱⲟⲩ ⲛⲓⲃⲉⲛ ⲛ̀ⲧⲉ ⲛⲓⲉⲥⲱⲟⲩ.</em></p>
+			<p>33. <em>Ⲁⲩϩⲉⲙⲥⲓ ⲇⲉ ⲙ̀ⲡⲉϥⲙ̀ⲑⲟ. ⲡⲓϣⲟⲣⲡ ⲙ̀ⲙⲓⲥⲓ ⲕⲁⲧⲁ ⲧⲉϥⲙⲉⲧⲛⲓϣϯ. ⲟⲩⲟϩ ⲡⲓⲕⲟⲩϫⲓ ⲕⲁⲧⲁ ⲧⲉϥⲙⲉⲧⲕⲟⲩϫⲓ<sup class="footnote">53</sup>. ⲛⲁⲩⲧⲟⲙⲧ ⲇⲉ ⲛ̀ϫⲉ ⲛⲓⲣⲱⲙⲓ. ⲡⲓⲟⲩⲁⲓ ⲡⲓⲟⲩⲁⲓ ⲟⲩⲃⲉ ⲡⲉϥⲥⲟⲛ.</em></p>
+			<p>34. <em>Ⲛⲁⲩⲱⲗⲓ ⲇⲉ ⲛ̀ϩⲁⲛⲧⲟⲓ ⲛ̀ⲧⲟⲧϥ ⲡⲉ. ⲉⲩϯ<sup class="footnote">54</sup> ⲙ̀ⲙⲱⲟⲩ ⲛⲱⲟⲩ ⲁⲥⲉⲣⲛⲓϣϯ ⲇⲉ ⲛ̀ϫⲉ ⲧⲧⲟⲓ ⲛ̀ⲃⲉⲛⲓⲁⲙⲓⲛ<sup class="footnote">55</sup> ⲉϩⲟⲧⲉ ⲛⲓⲧⲟⲓ ⲧⲏⲣⲟⲩ ⲛ̀ⲧⲱⲟⲩ<sup class="footnote">56</sup>. ⲛ̀ⲉ̅ ⲛ̀ⲕⲱⲃ ϧⲁⲧⲉⲛ ⲛⲁⲛⲏ. ⲁⲩⲥⲱ ⲇⲉ ⲟⲩⲟϩ ⲁⲩⲑⲓϧⲓ ⲛⲉⲙⲁϥ.</em></p>
 			<p class="footnote">— 1. Vat. + <em>ⲟⲛ</em>.</p>
 			<p class="footnote">— 2. Vat. + <em>ⲟⲛ</em>.</p>
 			<p class="footnote">— 3. Vat. + <em>ϩⲓⲛⲁ ⲛ̀ⲧⲉⲛϣⲧⲉⲙⲙⲟⲩ</em>.</p>
