--- a/coptic/mallon/index.html
+++ b/coptic/mallon/index.html
@@ -21973,6 +21973,40 @@
 			<p class="footnote">— 55. Vat. <em>ⲙ̀ⲃⲉⲛⲓⲁⲙⲓⲛ</em>.</p>
 			<p class="footnote">56. Vat. <em>ⲉϩⲟⲧⲉ ⲛⲓⲧⲟⲓ ⲛ̀ⲧⲱⲟⲩ ⲧⲏⲣⲟⲩ</em>.</p>
 			<p>XLIV.</p>
+			<p>1. <em>Ⲁϥϩⲉⲛϩⲉⲛ<sup class="footnote">1</sup> ⲛ̀ϫⲉ ⲓⲱⲥⲏⲫ ⲉⲧⲟⲧϥ ⲙ̀ⲫⲏ ⲉⲧⲭⲏ ⲉϩⲣⲏⲓ<sup class="footnote">2</sup> ⲉϫⲉⲛ ⲡⲉϥⲏⲓ. ⲉϥϫⲱ ⲙ̀ⲙⲟⲥ. ϫⲉ ⲙⲁϩ ⲛⲉⲛⲥⲟⲕ ⲛ̀ⲛⲁⲓⲣⲱⲙⲓ ⲛ̀ⲥⲟⲩⲟ̀ ⲛⲱⲟⲩ. ⲫⲏ ⲉⲧⲟⲩⲛⲁϣϫⲉⲙϫⲟⲙ ⲛ̀ⲟⲗϥ. ϩⲓ<sup class="footnote">3</sup> ⲡϩⲁⲧ ⲙ̀ⲡⲓⲟⲩⲁⲓ ⲡⲓⲟⲩⲁⲓ ⲉⲣⲱϥ ⲙ̀ⲡⲉϥⲥⲟⲕ.</em></p>
+			<p>2. <em>Ⲟⲩⲟϩ ⲧⲁⲫⲩⲁⲗⲏ ⲛ̀ϩⲁⲧ ϩⲓⲧⲥ ⲉ ⲡⲥⲟⲕ ⲙ̀ⲡⲓⲕⲟⲩϫⲓ. ⲛⲉⲙ ⲧⲧⲓⲙⲏ ⲙ̀ⲡⲉϥⲥⲟⲩⲟ̀. ⲁⲥϣⲱⲡⲓ ⲇⲉ ⲕⲁⲧⲁ ⲡⲓⲥⲁϫⲓ. ⲉⲧⲁϥϫⲟϥ ⲛ̀ϫⲉ ⲓⲱⲥⲏⲫ.</em></p>
+			<p>3. <em>Ⲁ ϣⲱⲣⲡ ⲇⲉ ⲉⲣⲟⲩⲱⲓⲛⲓ ⲁⲩⲟⲩⲱⲣⲡ<sup class="footnote">4</sup> ⲛ̀ⲛⲓⲣⲱⲙⲓ ⲉⲃⲟⲗ. ⲛⲉⲙ<sup class="footnote">5</sup> ⲛⲟⲩⲉ̀ⲉⲩ.</em></p>
+			<p>4. <em>Ⲉⲧⲁⲩⲉⲣⲥⲁⲃⲟⲗ ⲇⲉ ⲛ̀ϯⲃⲁⲕⲓ ⲙ̀ⲡⲁⲧⲟⲩⲟⲩⲉⲓ ⲉ̀ⲃⲟⲗ. ⲡⲉϫⲉ ⲓⲱⲥⲏⲫ ⲙ̀ⲫⲏ ⲉⲧⲭⲏ ϩⲓϫⲉⲛ<sup class="footnote">6</sup> ⲡⲉϥⲏⲓ ⲉϥϫⲱ ⲙ̀ⲙⲟⲥ. ϫⲉ ⲧⲱⲛⲕ ϭⲟϫⲓ ⲥⲁⲙⲉⲛϩⲉ ⲛ̀ⲛⲓⲣⲱⲙⲓ<sup class="footnote">7</sup>. ⲉⲕⲉ̀ⲧⲁϩⲱⲟⲩ<sup class="footnote">8</sup> ⲉⲕⲉ̀ϫⲟⲥ<sup class="footnote">8</sup> ⲛⲱⲟⲩ. ϫⲉ ⲉⲑⲃⲉ ⲟⲩ ⲁⲣⲉⲧⲉⲛϯ ⲛ̀ϩⲁⲛⲡⲉⲧϩⲱⲟⲩ. ϧⲁ ϩⲁⲛⲡⲉⲑⲛⲁⲛⲉⲩ<sup class="footnote">9</sup>.</em></p>
+			<p>5. <em>ⲉⲑⲃⲉ ⲟⲩ ⲁⲣⲉⲧⲉⲛⲕⲱⲗⲡ ⲛ̀ϯⲫⲩⲁⲗⲏ ⲛ̀ϩⲁⲧ<sup class="footnote">10</sup> ⲑⲁⲓ ⲉϣⲁⲣⲉ ⲡⲁϭⲟⲓⲥ<sup class="footnote">11</sup> ⲥⲱ ⲛ̀ϧⲏⲧⲥ. ⲛ̀ⲑⲟϥ ⲇⲉ ϧⲉⲛ ⲟⲩϭⲓϣⲏⲙ ϣⲁϥϭⲓϣⲏⲙ<sup class="footnote">12</sup> ⲛ̀ϧⲏⲧⲥ. ϩⲁⲛⲡⲉⲧϩⲱⲟⲩ<sup class="footnote">13</sup> ⲁⲣⲉⲧⲉⲛϫⲟⲕⲟⲩ ⲉ̀ⲃⲟⲗ ⲛⲏ ⲉⲧⲁⲣⲉⲧⲉⲛⲁⲓⲧⲟⲩ.</em></p>
+			<p>6. <em>Ⲉⲧⲁϥϫⲉⲙⲟⲩ ⲇⲉ ⲁϥϫⲟⲥ ⲛⲱⲟⲩ ⲕⲁⲧⲁ ⲛⲁⲓⲥⲁϫⲓ.</em></p>
+			<p>7. <em>ⲛ̀ⲑⲱⲟⲩ ⲇⲉ ⲡⲉϫⲱⲟⲩ ⲛⲁϥ. ϫⲉ ⲉⲑⲃⲉ ⲟⲩ ⲡⲉⲛϭⲟⲓⲥ ⲥⲁϫⲓ ⲛⲉⲙⲁⲛ ⲕⲁⲧⲁ ⲛⲁⲓⲥⲁϫⲓ ⲛ̀ⲛⲉⲥϣⲱⲡⲓ ⲛ̀ⲛⲁⲕⲁⲗⲱⲟⲩⲓ ⲛ̀ⲧⲟⲩⲓⲣⲓ ⲙ̀ⲡⲁⲓⲥⲁϫⲓ<sup class="footnote">14</sup>.</em></p>
+			<p>8. <em>Ⲓⲥϫⲉ ⲙⲉⲛ ⲡⲓϩⲁⲧ ⲉⲧⲁⲛϫⲉⲙϥ ϧⲉⲛ ⲛⲉⲛⲥⲟⲕ. ⲁⲛⲧⲁⲥⲑⲟϥ ϩⲁⲣⲟⲕ ⲉ̀ⲃⲟⲗ ϧⲉⲛ ⲡⲕⲁϩⲓ ⲛ̀ⲭⲁⲛⲁⲁⲛ. ⲡⲱⲥ ⲧⲉⲛⲛⲁⲕⲱⲗⲡ<sup class="footnote">15</sup> ⲉ̀ⲃⲟⲗ ϧⲉⲛ ⲡⲏⲓ ⲙ̀ⲡⲉⲛϭⲟⲓⲥ ⲛ̀ⲟⲩϩⲁⲧ ⲓⲉ ⲟⲩⲛⲟⲩⲃ.</em></p>
+			<p>9. <em>Ⲫⲏ ⲉⲧⲟⲩⲛⲁϫⲓⲙⲓ ⲛ̀ϯⲫⲩⲁⲗⲏ ⲛ̀ϩⲁⲧ ⲛ̀ⲧⲟⲧϥ<sup class="footnote">16</sup> ϧⲉⲛ ⲛⲉⲕⲁ̀ⲗⲱⲟⲩⲓ̀. ⲉ̀ϥⲉ̀ⲙⲟⲩ ⲁⲛⲟⲛ ⲇⲉ ⲉ̀ⲛⲉⲉⲣⲃⲱⲕ ⲙ̀ⲡⲉⲛϭⲟⲓⲥ.</em></p>
+			<p>10. <em>ⲛ̀ⲑⲟϥ ⲇⲉ ⲡⲉϫⲁϥ ϫⲉ<sup class="footnote">17</sup> ⲙⲁⲣⲉⲥϣⲱⲡⲓ ⲙ̀ⲡⲓⲣⲏϯ<sup class="footnote">18</sup> ⲉ̀ⲧⲉⲧⲉⲛϫⲱ ⲙ̀ⲙⲟⲥ. ⲡⲓⲣⲱⲙⲓ ⲉⲧⲟⲩⲛⲁϫⲉⲙ ϯⲫⲩⲁⲗⲏ ⲛ̀ⲧⲟⲧϥ. ⲛ̀ⲑⲟϥ ⲉϥⲉ̀ϣⲱⲡⲓ ⲛⲏⲓ<sup class="footnote">19</sup> ⲛ̀ⲟⲩⲁ̀ⲗⲟⲩ. ⲛ̀ⲑⲱⲧⲉⲛ ⲉⲣⲉⲧⲉⲛⲉ̀ϣⲱⲡⲓ<sup class="footnote">20</sup> ⲉⲣⲉⲧⲉⲛⲧⲟⲩⲃⲏⲟⲩⲧ.</em></p>
+			<p>11. <em>Ⲁⲩⲓⲏⲥ ⲛ̀ⲧⲟⲧⲟⲩ ⲁ ⲡⲓⲟⲩⲁⲓ ⲡⲓⲟⲩⲁⲓ. ⲟⲩⲟϩ ⲙ̀ⲡⲉϥⲥⲟⲕ<sup class="footnote">21</sup> ϩⲓϫⲉⲛ ⲡⲓⲕⲁϩⲓ. ⲟⲩⲟϩ ⲁ ⲫⲟⲩⲁⲓ ⲫⲟⲩⲁⲓ. ⲟⲩⲱⲛ ⲙ̀ⲡⲉϥⲥⲟⲕ.</em></p>
+			<p>12. <em>Ⲛⲁϥϧⲟⲧϧⲉⲧ ⲇⲉ ⲡⲉ. ⲉⲁϥⲉⲣϩⲏⲧⲥ ⲓⲥϫⲉⲛ ⲡⲓⲛⲓϣϯ. ϣⲁⲧⲉϥⲫⲟϩ ⲉⲡⲓⲕⲟⲩϫⲓ. ⲟⲩⲟϩ ⲁϥϫⲓⲙⲓ ⲛ̀ϯⲫⲩⲁⲗⲏ<sup class="footnote">22</sup> ϧⲉⲛ ⲡⲥⲟⲕ ⲛ̀ⲃⲉⲛⲓⲁⲙⲓⲛ.</em></p>
+			<p>13. <em>Ⲟⲩⲟϩ ⲁⲩⲫⲱϧ ⲛ̀ⲛⲟⲩϩⲃⲱⲥ. ⲁ<sup class="footnote">23</sup> ⲫⲟⲩⲁⲓ ⲫⲟⲩⲁⲓ ⲧⲁⲗⲟ ⲙ̀ⲡⲉϥⲥⲟⲕ ⲉ ⲡⲉϥⲓⲱ. ⲁⲩⲧⲁⲥⲑⲟ<sup class="footnote">23</sup> ⲉ ϯⲃⲁⲕⲓ.</em></p>
+			<p>14. <em>Ⲁϥⲓ̀ ⲇⲉ ⲉϧⲟⲩⲛ ⲛ̀ϫⲉ ⲓⲟⲩⲇⲁⲥ ⲛⲉⲙ ⲛⲉϥⲥⲛⲏⲟⲩ<sup class="footnote">24</sup> ϩⲁ ⲓⲱⲥⲏⲫ. ⲉⲧⲓ ⲉϥⲭⲏ ϧⲉⲛ ⲡⲓⲙⲁ. ⲁⲩϩⲓⲧⲟⲧⲟⲩ<sup class="footnote">25</sup> ⲉϫⲉⲛ ⲡⲓⲕⲁϩⲓ ⲙ̀ⲡⲉϥⲙ̀ⲑⲟ.</em></p>
+			<p>15. <em>Ⲡⲉϫⲁϥ ⲇⲉ ⲛⲱⲟⲩ ⲛ̀ϫⲉ ⲓⲱⲥⲏⲫ. ϫⲉ ⲡⲁⲓϩⲱⲃ ⲟⲩ ⲡⲉ ⲉⲧⲁ̀ⲣⲉⲧⲉⲛⲁⲓϥ. ⲧⲉⲧⲉⲛⲥⲱⲟⲩⲛ<sup class="footnote">26</sup> ⲁⲛ. ϫⲉ ϧⲉⲛ ⲟⲩϭⲓϣⲏⲙ ⲉ̀ϣⲁϥϭⲓϣⲏⲙ<sup class="footnote">27</sup> ⲛ̀ϫⲉ ⲡⲓⲣⲱⲙⲓ ⲉⲧⲉ ⲁⲛⲟⲕ ⲡⲉ.</em></p>
+			<p>16. <em>Ⲡⲉϫⲉ ⲓⲟⲩⲇⲁⲥ ⲇⲉ. ϫⲉ ⲟⲩ ⲡⲉⲧⲉⲛⲛⲁⲟⲩⲁϩⲙⲉϥ<sup class="footnote">28</sup> ⲙ̀ⲡⲉⲛϭⲟⲓⲥ. ⲓⲉ ⲟⲩ ⲡⲉⲧⲉⲛⲛⲁⲥⲁϫⲓ<sup class="footnote">29</sup> ⲙ̀ⲙⲟϥ. ⲓⲉ ⲁⲛⲛⲁⲑⲙⲁⲓⲟⲛ ϧⲉⲛ ⲟⲩ. ⲫϯ ⲇⲉ<sup class="footnote">30</sup> ⲁϥϫⲉⲙ ⲑⲙⲉⲧϭⲓⲛ̀ϫⲟⲛⲥ ⲛ̀ⲛⲉⲕⲁ̀ⲗⲱⲟⲩⲓ̀. ϩⲏⲡⲡⲉ ⲉ̀ⲛⲉⲉⲣⲃⲱⲕ<sup class="footnote">31</sup> ⲙ̀ⲡⲉⲛϭⲟⲓⲥ ⲁⲛⲟⲛ ⲛⲉⲙ ⲫⲏ ⲉⲧⲁⲩϫⲉⲙ ϯⲫⲩⲁⲗⲏ ⲛ̀ⲧⲟⲧϥ.</em></p>
+			<p>17. <em>Ⲡⲉϫⲁϥ ⲇⲉ ⲛⲱⲟⲩ ⲛ̀ϫⲉ ⲓⲱⲥⲏⲫ. ϫⲉ ⲛ̀ⲛⲉⲥϣⲱⲡⲓ ⲛⲏⲓ ⲉ̀ ⲓⲣⲓ ⲙ̀ⲡⲁⲓⲥⲁϫⲓ. ⲡⲓⲣⲱⲙⲓ ⲉⲧⲁⲩϫⲙ ϯⲫⲩⲁⲗⲏ ⲛ̀ⲧⲟⲧϥ. ⲛ̀ⲑⲟϥ ⲉϥⲉ̀ϣⲱⲡⲓ ⲛⲏⲓ ⲛ̀ⲟⲩⲁ̀ⲗⲟⲩ. ⲛ̀ⲑⲱⲧⲉⲛ ⲇⲉ ⲙⲁϣⲉ ⲛⲱⲧⲉⲛ ⲉ̀ⲡϣⲱⲓ<sup class="footnote">32</sup> ϩⲁ ⲡⲉⲧⲉⲛⲓⲱⲧ ϧⲉⲛ ⲟⲩⲟⲩϫⲁⲓ.</em></p>
+			<p>18. <em>Ⲁϥϩⲉⲛϥ ⲇⲉ ⲉ̀ⲣⲟϥ<sup class="footnote">33</sup> ⲛ̀ϫⲉ ⲓⲟⲩⲇⲁⲥ ⲡⲉϫⲁϥ ϫⲉ ϯϯϩⲟ ⲉ̀ⲣⲟⲕ ⲡⲁϭⲟⲓⲥ ⲙⲁⲣⲉ ⲡⲉⲕⲁ̀ⲗⲟⲩ. ϫⲉ ⲟⲩⲥⲁϫⲓ ⲙ̀ⲡⲉⲕⲙ̀ⲑⲟ. ⲟⲩⲟϩ ⲙ̀ⲡⲉⲣϫⲱⲛⲧ ⲉ̀ ⲡⲉⲕⲁ̀ⲗⲟⲩ. ϫⲉ<sup class="footnote">34</sup> ⲛ̀ⲑⲟⲕ ⲡⲉ ⲙⲉⲛⲉⲛⲥⲁ ⲫⲁⲣⲁⲱ̀.</em></p>
+			<p>19. <em>ⲡⲁϭⲟⲓⲥ. Ⲛⲑⲟⲕ ⲇⲉ<sup class="footnote">35</sup> ⲁⲕϣⲉⲛ ⲛⲉⲕⲁ̀ⲗⲱⲟⲩⲓ̀ ⲉⲕϫⲱ ⲙ̀ⲙⲟⲥ. ϫⲉ ⲁⲛ. ⲟⲩⲟⲛⲧⲉⲧⲉⲛ ⲓⲱⲧ ⲙ̀ⲙⲁⲩ. ⲓⲉ ⲥⲟⲛ.</em></p>
+			<p>20. <em>Ⲡⲉϫⲁⲛ<sup class="footnote">36</sup> ⲙ̀ⲡⲉⲛϭⲟⲓⲥ ϫⲉ ⲟⲩⲟⲛ ⲛ̀ⲧⲁⲛ. ⲛ̀ⲟⲩϧⲉⲗⲗⲟ ⲛ̀ⲓⲱⲧ ⲙ̀ⲙⲁⲩ. ⲛⲉⲙ ⲟⲩⲁ̀ⲗⲟⲩ ⲉ̀ⲁϥϫⲫⲟϥ ϧⲉⲛ ⲧⲉϥⲙⲉⲧϧⲉⲗⲗⲟ. ⲡⲉϥⲕⲉⲥⲟⲛ ⲇⲉ ϥϣⲟⲡ ⲁⲛ ⲁϥⲙⲟⲩ ⲛ̀ⲑⲟϥ ⲙ̀ⲙⲁⲩⲁⲧϥ ⲉ̀ⲧⲥⲟϫⲡ ⲛ̀ⲧⲉ ⲧⲉϥⲙⲁⲩ ⲡⲉϥⲓⲱⲧ ⲇⲉ ⲁϥⲙⲉⲛⲣⲓⲧϥ.</em></p>
+			<p>21. <em>Ⲡⲉϫⲁⲕ ⲇⲉ<sup class="footnote">37</sup> ⲛ̀ⲛⲉⲕⲁ̀ⲗⲱⲟⲩⲓ̀. ϫⲉ ⲁ̀ⲛⲓⲧϥ ϩⲁⲣⲟⲓ ⲟⲩⲟϩ ⲉⲓⲉ̀ⲟϩⲓ ⲟⲩⲃⲏϥ.</em></p>
+			<p>22. <em>Ⲡⲉϫⲁⲛ<sup class="footnote">38</sup> ⲙ̀ⲡⲉⲛϭⲟⲓⲥ. ϫⲉ ⲙ̀ⲙⲟⲛ ϣϫⲟⲙ ⲛ̀ⲧⲉ ⲡⲓⲁ̀ⲗⲟⲩ ⲭⲁ ⲡⲉϥⲓⲱⲧ ⲛ̀ⲥⲱϥ. Ⲉϣⲱⲡ ⲇⲉ ⲛ̀ⲧⲉϥⲭⲁ ⲡⲉϥⲓⲱⲧ ⲛ̀ⲥⲱϥ ϥⲛⲁⲙⲟⲩ.</em></p>
+			<p>23. <em>Ⲛⲑⲟⲕ ⲇⲉ ⲡⲉϫⲁⲕ ⲛ̀ⲛⲉⲕⲁ̀ⲗⲱⲟⲩⲓ̀. ϫⲉ ⲁ̀ⲣⲉ ϣⲧⲉⲙ ⲡⲉⲧⲉⲛⲕⲟⲩϫⲓ ⲛ̀ⲥⲟⲛ ⲓ̀ ⲉ̀ϧⲣⲏⲓ ⲛⲉⲙⲱⲧⲉⲛ. ⲛ̀ⲛⲉⲧⲉⲛⲟⲩⲁϩⲧⲉⲛⲑⲏⲛⲟⲩ ⲉ̀ ⲛⲁⲩ ⲉ̀ ⲡⲁϩⲟ.</em></p>
+			<p>24. <em>Ⲁⲥϣⲱⲡⲓ ⲇⲉ ⲉ̀ⲧⲁⲛϣⲉ ⲛⲁⲛ ⲉ̀ⲡϣⲱⲓ ϩⲁ ⲡⲉⲕⲁ̀ⲗⲟⲩ ⲉⲧⲉ ⲡⲉⲛⲓⲱⲧ ⲡⲉ. ⲁⲛⲧⲁⲙⲟϥ ⲉ̀ ⲛⲉⲛⲥⲁϫⲓ ⲙ̀ⲡⲉⲛϭⲟⲓⲥ.</em></p>
+			<p>25. <em>Ⲡⲉϫⲉ ⲡⲉⲛⲓⲱⲧ ⲇⲉ. ϫⲉ ⲙⲁϣⲉ ⲛⲱⲧⲉⲛ ⲟⲛ ϣⲉⲡ ϩⲁⲛⲕⲟⲩϫⲓ ⲛ̀ϧⲣⲏⲟⲩⲓ̀ ⲛⲁⲛ.</em></p>
+			<p>26. <em>Ⲁⲛⲟⲛ ⲇⲉ ⲡⲉϫⲁⲛ ⲙ̀ⲡⲉⲛⲓⲱⲧ ϫⲉ ⲙ̀ⲙⲟⲛ ϣϫⲟⲙ ⲙ̀ⲙⲟⲛ ⲉ̀ ϣⲉ ⲛⲁⲛ ⲉ̀ϧⲣⲏⲓ<sup class="footnote">39</sup>. ⲁⲗⲗⲁ ⲓⲥϫⲉ ⲡⲉⲛⲕⲟⲩϫⲓ<sup class="footnote">40</sup> ⲛ̀ⲥⲟⲛ ⲛⲁⲓ̀ ⲉ̀ϧⲣⲏⲓ ⲛⲉⲙⲁⲛ. ⲧⲉⲛⲛⲁϣⲉ ⲛⲁⲛ. ⲧⲉⲛⲛⲁϣϫⲉⲙϫⲟⲙ ⲅⲁⲣ ⲁⲛ ⲉ̀ ⲛⲁⲩ ⲉ̀ ⲡϩⲟ ⲙ̀ⲡⲓⲣⲱⲙⲓ. ⲙ̀ⲡⲉⲛⲕⲟⲩϫⲓ ⲛ̀ⲥⲟⲛ ⲭⲏ ⲛⲉⲙⲁⲛ ⲁⲛ.</em></p>
+			<p>27. <em>Ⲡⲉϫⲉ ⲡⲉⲕⲁ̀ⲗⲟⲩ ⲇⲉ ⲡⲉⲛⲓⲱⲧ ⲛⲁⲛ<sup class="footnote">41</sup> ϫⲉ ⲛ̀ⲑⲱⲧⲉⲛ ⲧⲉⲧⲉⲛⲥⲱⲟⲩⲛ ϫⲉ ϣⲏⲣⲓ ⲃ̅, ⲁ̀ ⲧⲁⲓⲥϩⲓⲙⲓ<sup class="footnote">42</sup> ⲙⲁⲥⲟⲩ ⲛⲏⲓ.</em></p>
+			<p>28. <em>Ⲁ<sup class="footnote">43</sup> ⲡⲓⲟⲩⲁⲓ ⲙ̀ⲙⲱⲟⲩ ϣⲉ ⲛⲁϥ ⲉ̀ⲃⲟⲗ ϩⲁⲣⲟⲓ. ⲡⲉϫⲱⲧⲉⲛ<sup class="footnote">44</sup>. ϫⲉ ⲁ̀ ⲡⲑⲏⲣⲓⲟⲛ ⲟⲩⲟⲙϥ ⲙ̀ⲡⲓⲛⲁⲩ<sup class="footnote">44</sup> ⲉ̀ⲣⲟϥ ϣⲁϯⲛⲟⲩ.</em></p>
+			<p>29. <em>Ⲉϣⲱⲡ ⲟⲩⲛ ⲁ̀ⲣⲉⲧⲉⲛϣⲁⲛⲱ̀ⲗⲓ ⲙ̀ⲡⲁⲓⲭⲉⲧ ⲉ̀ⲃⲟⲗ ϩⲁ ⲡⲁϩⲟ. ⲛ̀ⲧⲉ<sup class="footnote">44</sup> ⲟⲩϣⲱⲛⲓ ⲧⲁϩⲟϥ ϩⲓ ⲡⲓⲙⲱⲓⲧ. ⲉ ⲧⲉⲧⲉⲛⲛⲁⲙⲟϣⲓ ϩⲓⲱⲧϥ. ⲧⲉⲧⲉⲛⲛⲁⲉⲗ ⲧⲁⲙⲉⲧϧⲉⲗⲗⲟ ⲉ̀ ⲁ̀ⲙⲉⲛϯ. ϧⲉⲛ ⲟⲩⲙ̀ⲕⲁϩ ⲛ̀ϩⲏⲧ.</em></p>
+			<p>30. <em>Ϯⲛⲟⲩ ⲇⲉ ⲁⲓⲛⲁϣⲉ<sup class="footnote">45</sup> ⲛⲏⲓ ⲉ̀ϧⲟⲩⲛ ϩⲁ ⲡⲉⲕⲁ̀ⲗⲟⲩ ⲉⲧⲉ ⲡⲉⲛⲓⲱⲧ ⲡⲉ. ⲙ̀ⲡⲓⲁⲗⲟⲩ ⲭⲏ ⲛⲉⲙⲏⲓ ⲁⲛ. ⲧⲉϥⲯⲩⲭⲏ ⲇⲉ ⲁⲥⲁ̀ϣⲓ<sup class="footnote">46</sup> ϧⲉⲛ ⲧⲯⲩⲭⲏ ⲙ̀ⲡⲓⲁ̀ⲗⲟⲩ.</em></p>
+			<p>31. <em>Ⲉϣⲱⲡ<sup class="footnote">47</sup> ⲁϥϣⲁⲛⲛⲁⲩ ⲉ̀ⲣⲟⲛ. ⲙ̀ⲡⲓⲁ̀ⲗⲟⲩ<sup class="footnote">48</sup> ⲛⲉⲙⲁⲛ ⲁⲛ ϥⲛⲁⲙⲟⲩ. ⲟⲩⲟϩ ⲛⲉⲕⲁ̀ⲗⲱⲟⲩⲓ̀. ⲥⲉⲛⲁⲉⲗ ⲑⲙⲉⲧϧⲉⲗⲗⲟ ⲙ̀ⲡⲉⲕⲁ̀ⲗⲟⲩ ⲉⲧⲉ ⲡⲉⲛⲓⲱⲧ ⲡⲉ ⲉ̀ⲡⲉⲥⲏⲧ ⲉ̀ ⲁ̀ⲙⲉⲛϯ ϧⲉⲛ ⲟⲩⲙ̀ⲕⲁϩ ⲛ̀ϩⲏⲧ.</em></p>
+			<p>32. <em>Ⲡⲉⲕⲃⲱⲕ ⲅⲁⲣ ⲁϥⲉⲣⲡϣⲧⲱⲣⲓ ⲙ̀ⲡⲓⲁ̀ⲗⲟⲩ ⲛ̀ⲧⲉⲛⲡⲉϥⲓⲱⲧ<sup class="footnote">49</sup> ⲉⲓϫⲱ ⲙ̀ⲙⲟⲥ. ϫⲉ ⲉ̀ϣⲱⲡ ⲁⲓϣⲧⲉⲙⲉⲛϥ ϩⲁⲣⲟⲕ. ⲛ̀ⲧⲁⲧⲁϩⲟϥ ⲉ̀ⲣⲁⲧϥ ⲙ̀ⲡⲉⲕⲙ̀ⲑⲟ. ⲉⲓⲉ̀ϣⲱⲡⲓ ⲉⲓⲟⲓ ⲛ̀ⲣⲉϥⲉⲣⲛⲟⲃⲓ. ⲉ̀ ⲡⲁⲓⲱⲧ ⲛ̀ⲛⲓⲉϩⲟⲟⲩ ⲧⲏⲣⲟⲩ.</em></p>
+			<p>33. <em>Ϯⲛⲟⲩ ϫⲉ ϯⲛⲁⲟ̀ϩⲓ ϩⲁⲣⲟⲕ ⲛ̀ⲟⲩⲁ̀ⲗⲟⲩ ⲉ̀ ⲫⲙⲁ ⲙ̀ⲡⲓⲁ̀ⲗⲟⲩ ⲉⲓⲟⲓ ⲙ̀ⲃⲱⲕ ⲙ̀ⲡⲁϭⲟⲓⲥ. ⲡⲓⲁ̀ⲗⲟⲩ ⲇⲉ ⲙⲁⲣⲉϥϣⲉ ⲛⲁϥ. ⲉ̀ⲡϣⲱⲓ ⲛⲉⲙ ⲛⲉϥⲥⲛⲏⲟⲩ.</em></p>
+			<p>34. <em>Ⲡⲱⲥ ⲅⲁⲣ ϯⲛⲁϣⲉ<sup class="footnote">50</sup> ⲛⲏⲓ ⲉ̀ⲡϣⲱⲓ ϩⲁ ⲡⲁⲓⲱⲧ. ⲙ̀ⲡⲓⲁ̀ⲗⲟⲩ ⲭⲏ ⲛⲉⲙⲏⲓ ⲁⲛ. ϩⲓⲛⲁ ⲛ̀ⲧⲁϣⲧⲉⲙⲛⲁⲩ ⲉ̀ ⲛⲓⲡⲉⲧϩⲱⲟⲩ. ⲉⲧⲛⲁⲧⲁϩⲉ<sup class="footnote">51</sup> ⲡⲁⲓⲱⲧ.</em></p>
 			<p class="footnote">— 1. Vat. <em>ⲁϥϩⲟⲛϩⲉⲛ</em>.</p>
 			<p class="footnote">— 2. Vat. <em>ⲉϧⲣⲏⲓ</em>.</p>
 			<p class="footnote">— 3. Vat. + <em>ⲟⲩⲟϩ</em>.</p>
